@@ -13,7 +13,6 @@ import java.awt.FontMetrics;
 import java.awt.Graphics2D;
 import java.awt.Rectangle;
 import java.awt.event.MouseEvent;
-import java.util.ArrayList;
 import java.util.List;
 import javax.inject.Inject;
 import javax.inject.Singleton;
@@ -78,37 +77,23 @@ public class BaRolePanelOverlay extends OverlayPanel implements MouseListener
     @Override
     public Dimension render(Graphics2D graphics)
     {
-        if (!config.showOverlayPanel() || healerController == null)
-        {
-            return hidePanel();
-        }
+        if (!config.showOverlayPanel() || healerController == null) return hidePanel();
 
-        if (!healerController.isWaveActive())
-        {
-            return hidePanel();
-        }
+        if (!healerController.isWaveActive()) return hidePanel();
 
-        BaUtilitiesConfig.FoodPanelStyle panelStyle = getEffectivePanelStyle();
+        BaUtilitiesConfig.FoodPanelStyle panelStyle = healerController.getFoodPanelStyle();
         String sourceText = healerController.getCurrentWaveCodeDisplaySource();
         String notes = getCurrentWaveNotes();
         boolean healerContent = shouldRenderHealerContent(panelStyle, sourceText);
         boolean notesContent = !isBlank(notes);
 
-        if (!healerContent && !notesContent)
-        {
-            return hidePanel();
-        }
+        if (!healerContent && !notesContent) return hidePanel();
 
         Font originalFont = preparePanel(graphics);
 
         try
         {
-            panelComponent.getChildren().add(
-                    TitleComponent.builder()
-                            .text(getPanelTitle())
-                            .color(getPanelTitleColor())
-                            .build()
-            );
+            addTitle(getPanelTitle(), getPanelTitleColor());
 
             if (!healerContent)
             {
@@ -157,15 +142,9 @@ public class BaRolePanelOverlay extends OverlayPanel implements MouseListener
         }
     }
 
-    private BaUtilitiesConfig.FoodPanelStyle getEffectivePanelStyle()
-    {
-        return healerController.getFoodPanelStyle();
-    }
-
     private boolean shouldRenderHealerContent(BaUtilitiesConfig.FoodPanelStyle panelStyle, String sourceText)
     {
-        return healerController != null
-                && healerController.isHealerRole()
+        return healerController.isHealerRole()
                 && panelStyle != BaUtilitiesConfig.FoodPanelStyle.NONE
                 && (panelStyle != BaUtilitiesConfig.FoodPanelStyle.CODE_ONLY || !isBlank(sourceText));
     }
@@ -231,6 +210,31 @@ public class BaRolePanelOverlay extends OverlayPanel implements MouseListener
         return dimension;
     }
 
+	private void addTitle(String text, Color color)
+	{
+		panelComponent.getChildren().add(
+				TitleComponent.builder()
+						.text(text)
+						.color(color)
+						.build()
+		);
+	}
+
+	private void addLine(String text)
+	{
+		panelComponent.getChildren().add(LineComponent.builder().left(text).build());
+	}
+
+	private void addLine(String text, Color color)
+	{
+		panelComponent.getChildren().add(
+				LineComponent.builder()
+						.left(text)
+						.leftColor(color)
+						.build()
+		);
+	}
+
     private int getOverlayTextSize()
     {
         return Math.max(8, config.foodPanelOverlayTextSize());
@@ -294,11 +298,6 @@ public class BaRolePanelOverlay extends OverlayPanel implements MouseListener
 
 	private String getCurrentStrategyName()
 	{
-		if (healerController == null || !healerController.isWaveActive())
-		{
-			return "";
-		}
-
 		return strategyManager.getActiveStrategyName(
 				healerController.getCurrentWave(),
 				getCurrentRoleContext()
@@ -310,18 +309,14 @@ public class BaRolePanelOverlay extends OverlayPanel implements MouseListener
         for (int healerOrder : healerOrders)
         {
             boolean spawned = healerController.hasHealerSpawned(healerOrder);
-            boolean displayDead = shouldDisplayHealerDead(healerOrder);
+            boolean displayDead = healerController.isHealerDead(healerOrder);
             Color healerColor = getHealerColor(spawned, displayDead);
             String deathTime = getDeathTimeText(healerOrder);
             String text = ColorUtil.prependColorTag(healerController.getFoodPanelHealerLabel(healerOrder), healerColor)
                     + " "
                     + ColorUtil.prependColorTag("(" + deathTime + ")", getDeathTimeColor(healerOrder, deathTime));
 
-            panelComponent.getChildren().add(
-                    LineComponent.builder()
-                            .left(text)
-                            .build()
-            );
+            addLine(text);
         }
     }
 
@@ -331,7 +326,7 @@ public class BaRolePanelOverlay extends OverlayPanel implements MouseListener
         {
             String countText = healerController.getFoodPanelText(healerOrder, -1);
             boolean spawned = healerController.hasHealerSpawned(healerOrder);
-            boolean displayDead = shouldDisplayHealerDead(healerOrder);
+            boolean displayDead = healerController.isHealerDead(healerOrder);
             Color rowColor = getHealerColor(spawned, displayDead);
             Color rightColor = spawned && !displayDead ? healerController.getFoodPanelTextColor(healerOrder, -1) : getHealerColor(spawned, displayDead);
             String ttkText = healerController.getHealerPanelTtkText(healerOrder);
@@ -363,7 +358,7 @@ public class BaRolePanelOverlay extends OverlayPanel implements MouseListener
         {
             if (start > 0)
             {
-                panelComponent.getChildren().add(LineComponent.builder().left("").build());
+                addLine("");
             }
 
             addColumnTable(graphics, healerOrders.subList(start, Math.min(start + BASE_MAX_HEALER_COLUMNS, healerOrders.size())));
@@ -372,45 +367,25 @@ public class BaRolePanelOverlay extends OverlayPanel implements MouseListener
 
     private void addColumnTable(Graphics2D graphics, List<Integer> healerOrders)
     {
-        if (healerOrders.isEmpty())
-        {
-            return;
-        }
+        if (healerOrders.isEmpty()) return;
 
         List<Integer> callIndexes = getColumnCallIndexes();
 
-        panelComponent.getChildren().add(
-                LineComponent.builder()
-                        .left(buildColumnHeader(healerOrders, graphics.getFontMetrics()))
-                        .leftColor(TEXT_COLOR)
-                        .build()
-        );
+        addLine(buildColumnHeader(healerOrders, graphics.getFontMetrics()), TEXT_COLOR);
 
         for (int callIndex : callIndexes)
         {
-            panelComponent.getChildren().add(
-                    LineComponent.builder()
-                            .left(buildColumnRow(healerOrders, callIndex, graphics.getFontMetrics()))
-                            .leftColor(TEXT_COLOR)
-                            .build()
-            );
+            addLine(buildColumnRow(healerOrders, callIndex, graphics.getFontMetrics()), TEXT_COLOR);
         }
 
-        panelComponent.getChildren().add(
-                LineComponent.builder()
-                        .left(buildDeathTimeRow(healerOrders, graphics.getFontMetrics()))
-                        .leftColor(TEXT_COLOR)
-                        .build()
-        );
+        addLine(buildDeathTimeRow(healerOrders, graphics.getFontMetrics()), TEXT_COLOR);
     }
 
     private List<Integer> getColumnCallIndexes()
     {
         if (!healerController.hasActiveWaveCode())
         {
-            List<Integer> totalOnly = new ArrayList<>();
-            totalOnly.add(-1);
-            return totalOnly;
+            return List.of(-1);
         }
 
         return healerController.getFoodPanelCallIndexes();
@@ -420,21 +395,11 @@ public class BaRolePanelOverlay extends OverlayPanel implements MouseListener
     {
         FontMetrics metrics = graphics.getFontMetrics();
 
-        panelComponent.getChildren().add(
-                LineComponent.builder()
-                        .left(buildHealerCallHeader(metrics))
-                        .leftColor(TEXT_COLOR)
-                        .build()
-        );
+        addLine(buildHealerCallHeader(metrics), TEXT_COLOR);
 
         for (int healerOrder : healerOrders)
         {
-            panelComponent.getChildren().add(
-                    LineComponent.builder()
-                            .left(buildHealerCallRow(healerOrder, metrics))
-                            .leftColor(TEXT_COLOR)
-                            .build()
-            );
+            addLine(buildHealerCallRow(healerOrder, metrics), TEXT_COLOR);
         }
     }
 
@@ -442,7 +407,7 @@ public class BaRolePanelOverlay extends OverlayPanel implements MouseListener
     {
         StringBuilder builder = new StringBuilder(padRightPixels("", scale(BASE_ROW_LABEL_WIDTH), metrics));
 
-        for (int callIndex : getRowCallIndexes())
+        for (int callIndex : healerController.getFoodPanelCallIndexes())
         {
             builder.append(ColorUtil.prependColorTag(padCell("C" + (callIndex + 1), scale(BASE_ROW_CELL_WIDTH), metrics), TEXT_COLOR));
         }
@@ -454,25 +419,18 @@ public class BaRolePanelOverlay extends OverlayPanel implements MouseListener
     private String buildHealerCallRow(int healerOrder, FontMetrics metrics)
     {
         boolean spawned = healerController.hasHealerSpawned(healerOrder);
-        boolean displayDead = shouldDisplayHealerDead(healerOrder);
+        boolean displayDead = healerController.isHealerDead(healerOrder);
         StringBuilder builder = new StringBuilder(ColorUtil.prependColorTag(
                 padCell(healerController.getFoodPanelHealerLabel(healerOrder), scale(BASE_ROW_LABEL_WIDTH), metrics),
                 getHealerColor(spawned, displayDead)));
 
-        for (int callIndex : getRowCallIndexes())
+        for (int callIndex : healerController.getFoodPanelCallIndexes())
         {
             appendFoodCell(builder, healerOrder, callIndex, scale(BASE_ROW_CELL_WIDTH), metrics);
         }
 
         appendDeathTimeCell(builder, healerOrder, scale(BASE_ROW_CELL_WIDTH), metrics);
         return builder.toString();
-    }
-
-    private List<Integer> getRowCallIndexes()
-    {
-        List<Integer> callIndexes = new ArrayList<>();
-        callIndexes.addAll(healerController.getFoodPanelCallIndexes());
-        return callIndexes;
     }
 
     private String buildColumnHeader(List<Integer> healerOrders, FontMetrics metrics)
@@ -482,7 +440,7 @@ public class BaRolePanelOverlay extends OverlayPanel implements MouseListener
         for (int healerOrder : healerOrders)
         {
             boolean spawned = healerController.hasHealerSpawned(healerOrder);
-            boolean displayDead = shouldDisplayHealerDead(healerOrder);
+            boolean displayDead = healerController.isHealerDead(healerOrder);
             Color color = getHealerColor(spawned, displayDead);
             String label = healerController.getFoodPanelHealerLabel(healerOrder);
 
@@ -520,7 +478,7 @@ public class BaRolePanelOverlay extends OverlayPanel implements MouseListener
     private void appendFoodCell(StringBuilder builder, int healerOrder, int callIndex, int width, FontMetrics metrics)
     {
         boolean spawned = healerController.hasHealerSpawned(healerOrder);
-        boolean displayDead = shouldDisplayHealerDead(healerOrder);
+        boolean displayDead = healerController.isHealerDead(healerOrder);
         Color color = spawned && !displayDead ? healerController.getFoodPanelTextColor(healerOrder, callIndex) : getHealerColor(spawned, displayDead);
 
         if (color == null)
@@ -548,13 +506,8 @@ public class BaRolePanelOverlay extends OverlayPanel implements MouseListener
     private Color getDeathTimeColor(int healerOrder, String deathTime)
     {
         boolean spawned = healerController.hasHealerSpawned(healerOrder);
-        boolean displayDead = shouldDisplayHealerDead(healerOrder);
+        boolean displayDead = healerController.isHealerDead(healerOrder);
         return "-".equals(deathTime) || !spawned || displayDead ? getHealerColor(spawned, displayDead) : TTK_COLOR;
-    }
-
-    private boolean shouldDisplayHealerDead(int healerOrder)
-    {
-        return healerController.isHealerDead(healerOrder);
     }
 
     private Color getHealerColor(boolean spawned, boolean dead)
@@ -566,20 +519,14 @@ public class BaRolePanelOverlay extends OverlayPanel implements MouseListener
     {
         String value = text == null ? "" : text;
 
-        if (metrics == null)
-        {
-            return value;
-        }
+        if (metrics == null) return value;
 
         int remaining = width - metrics.stringWidth(value);
 
-        if (remaining <= 0)
-        {
-            return value;
-        }
+        if (remaining <= 0) return value;
 
         int spaceWidth = Math.max(metrics.stringWidth(" "), 1);
-        return value + spaces((int) Math.ceil(remaining / (double) spaceWidth));
+        return value + " ".repeat((int) Math.ceil(remaining / (double) spaceWidth));
     }
 
     private String padCell(String text, int width, FontMetrics metrics)
@@ -592,12 +539,9 @@ public class BaRolePanelOverlay extends OverlayPanel implements MouseListener
         String value = truncateCell(text);
         int maxCellChars = getMaxCellChars();
 
-        if (value.length() >= maxCellChars)
-        {
-            return value;
-        }
+        if (value.length() >= maxCellChars) return value;
 
-        return value + spaces(maxCellChars - value.length());
+        return value + " ".repeat(maxCellChars - value.length());
     }
 
     private String truncateCell(String text)
@@ -605,24 +549,9 @@ public class BaRolePanelOverlay extends OverlayPanel implements MouseListener
         String value = text == null ? "" : text;
         int maxCellChars = getMaxCellChars();
 
-        if (value.length() <= maxCellChars)
-        {
-            return value;
-        }
+        if (value.length() <= maxCellChars) return value;
 
         return value.substring(0, maxCellChars - 3) + "...";
-    }
-
-    private String spaces(int count)
-    {
-        StringBuilder builder = new StringBuilder();
-
-        for (int i = 0; i < count; i++)
-        {
-            builder.append(' ');
-        }
-
-        return builder.toString();
     }
 
     private void addCurrentWaveCodeAndNotes(boolean collapsible)
@@ -634,10 +563,7 @@ public class BaRolePanelOverlay extends OverlayPanel implements MouseListener
     {
         String sourceText = healerController.getCurrentWaveCodeDisplaySource();
 
-        if (isBlank(sourceText))
-        {
-            return false;
-        }
+        if (isBlank(sourceText)) return false;
 
         if (collapsible)
         {
@@ -648,20 +574,12 @@ public class BaRolePanelOverlay extends OverlayPanel implements MouseListener
 
             panelComponent.getChildren().add(codeToggleLine);
 
-            if (isCodeCollapsed())
-            {
-                return true;
-            }
+            if (isCodeCollapsed()) return true;
         }
 
         for (String line : sourceText.split("\\r?\\n", -1))
         {
-            panelComponent.getChildren().add(
-                    LineComponent.builder()
-                            .left(line.isEmpty() ? " " : line)
-                            .leftColor(TEXT_COLOR)
-                            .build()
-            );
+            addLine(line.isEmpty() ? " " : line, TEXT_COLOR);
         }
 
         return true;
@@ -679,14 +597,11 @@ public class BaRolePanelOverlay extends OverlayPanel implements MouseListener
     {
         String notes = getCurrentWaveNotes();
 
-        if (isBlank(notes))
-        {
-            return;
-        }
+        if (isBlank(notes)) return;
 
         if (separateFromCode)
         {
-            panelComponent.getChildren().add(LineComponent.builder().left("").build());
+            addLine("");
         }
 
         List<TimedStrategyNote> timedNotes = TimedStrategyNotes.parse(notes);
@@ -697,22 +612,12 @@ public class BaRolePanelOverlay extends OverlayPanel implements MouseListener
         {
             TimedStrategyNote note = timedNotes.get(i);
             String line = note.getText();
-            panelComponent.getChildren().add(
-                    LineComponent.builder()
-                            .left(line.isEmpty() ? " " : line)
-                            .leftColor(TimedStrategyNotes.colorFor(note, i, activeIndex, currentWaveTick, TEXT_COLOR, DEAD_COLOR))
-                            .build()
-            );
+            addLine(line.isEmpty() ? " " : line, TimedStrategyNotes.colorFor(note, i, activeIndex, currentWaveTick, TEXT_COLOR, DEAD_COLOR));
         }
     }
 
     private String getCurrentWaveNotes()
     {
-        if (healerController == null || !healerController.isWaveActive())
-        {
-            return "";
-        }
-
 		String notes = strategyManager.getActiveNotes(
 				healerController.getCurrentWave(),
                 getCurrentRoleContext()
@@ -786,7 +691,7 @@ public class BaRolePanelOverlay extends OverlayPanel implements MouseListener
 
     private static boolean isBlank(String value)
     {
-        return value == null || value.trim().isEmpty();
+        return value == null || value.isBlank();
     }
 
     @Override
