@@ -8,7 +8,6 @@ import com.bahealerorder.healer.codes.HealerCodeExport;
 import com.bahealerorder.healer.codes.HealerCodeExportResult;
 import com.bahealerorder.healer.codes.HealerCodeExportType;
 import com.bahealerorder.healer.codes.HealerCodeFormatter;
-import com.bahealerorder.healer.codes.HealerCodeParser;
 import com.bahealerorder.healer.codes.HealerCodeProgress;
 import com.bahealerorder.healer.codes.HealerCodeStatus;
 import com.bahealerorder.healer.codes.HealerCodeStoreNormalizer;
@@ -22,6 +21,7 @@ import java.util.Comparator;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.function.Function;
 import javax.inject.Inject;
 import javax.inject.Singleton;
 import net.runelite.client.config.ConfigManager;
@@ -58,7 +58,7 @@ public class HealerCodeManager
 	{
 		String json = configManager.getConfiguration(CONFIG_GROUP, STRATEGY_STORE_KEY);
 
-		if (json == null || json.trim().isEmpty())
+		if (json == null || json.isBlank())
 		{
 			userStore = createEmptyUserStore();
 			save();
@@ -97,10 +97,7 @@ public class HealerCodeManager
 
 	public void save()
 	{
-		if (configManager == null)
-		{
-			return;
-		}
+		if (configManager == null) return;
 
 		userStore.setVersion(CURRENT_STORE_VERSION);
 		configManager.setConfiguration(CONFIG_GROUP, STRATEGY_STORE_KEY, gson.toJson(userStore));
@@ -108,10 +105,7 @@ public class HealerCodeManager
 
 	private void backupRawStrategyStore(String json)
 	{
-		if (configManager == null || isBlank(json))
-		{
-			return;
-		}
+		if (configManager == null || isBlank(json)) return;
 
 		String existingBackup = configManager.getConfiguration(CONFIG_GROUP, STRATEGY_STORE_UPGRADE_BACKUP_KEY);
 		if (isBlank(existingBackup))
@@ -127,12 +121,6 @@ public class HealerCodeManager
 		return store;
 	}
 
-	public String exportRunPresetJson(String presetId)
-	{
-		HealerCodeExportResult result = exportRunPreset(presetId);
-		return result == null ? null : result.getJson();
-	}
-
 	public HealerCodeExportResult exportCurrentRunPreset(String name)
 	{
 		return exportRunPreset(name, userStore.getActiveWaveCodeIds(), null);
@@ -142,20 +130,14 @@ public class HealerCodeManager
 	{
 		RunPreset preset = findRunPreset(presetId);
 
-		if (preset == null)
-		{
-			return null;
-		}
+		if (preset == null) return null;
 
 		return exportRunPreset(preset.getName(), preset.getWaveCodeIds(), preset.getId());
 	}
 
 	private HealerCodeExportResult exportRunPreset(String name, Map<Integer, String> waveCodeIds, String id)
 	{
-		if (waveCodeIds == null || waveCodeIds.isEmpty())
-		{
-			return null;
-		}
+		if (waveCodeIds == null || waveCodeIds.isEmpty()) return null;
 
 		List<WaveCode> waveCodes = new ArrayList<>();
 		Map<Integer, String> exportedWaveCodeIds = new HashMap<>();
@@ -171,12 +153,9 @@ public class HealerCodeManager
 			}
 		}
 
-		if (exportedWaveCodeIds.isEmpty())
-		{
-			return null;
-		}
+		if (exportedWaveCodeIds.isEmpty()) return null;
 
-		RunPreset exportedPreset = new RunPreset(null, normalizedExportName(name), false, exportedWaveCodeIds);
+		RunPreset exportedPreset = new RunPreset(null, isBlank(name) ? null : name.trim(), false, exportedWaveCodeIds);
 		String json = gson.toJson(new HealerCodeExport(
 				CURRENT_STORE_VERSION,
 				HealerCodeExportType.RUN_PRESET,
@@ -198,10 +177,7 @@ public class HealerCodeManager
 	{
 		WaveCode waveCode = findWaveCode(waveCodeId);
 
-		if (waveCode == null)
-		{
-			return null;
-		}
+		if (waveCode == null) return null;
 
 		WaveCode exported = exportableWaveCode(waveCode);
 		String json = gson.toJson(new HealerCodeExport(
@@ -233,29 +209,17 @@ public class HealerCodeManager
 
 	public HealerCodeExportResult importHealerCodeJson(String json, Integer expectedWave)
 	{
-		if (json == null || json.trim().isEmpty())
-		{
-			return null;
-		}
+		if (json == null || json.isBlank()) return null;
 
 		try
 		{
 			HealerCodeExport imported = gson.fromJson(json, HealerCodeExport.class);
 
-			if (imported == null || imported.getVersion() != CURRENT_STORE_VERSION || imported.getType() == null)
-			{
-				return null;
-			}
+			if (imported == null || imported.getVersion() != CURRENT_STORE_VERSION || imported.getType() == null) return null;
 
-			if (imported.getType() == HealerCodeExportType.WAVE_CODE)
-			{
-				return importWaveCodeExport(imported.getWaveCode(), expectedWave);
-			}
+			if (imported.getType() == HealerCodeExportType.WAVE_CODE) return importWaveCodeExport(imported.getWaveCode(), expectedWave);
 
-			if (expectedWave != null)
-			{
-				return null;
-			}
+			if (expectedWave != null) return null;
 
 			return importRunPresetExport(imported);
 		}
@@ -267,8 +231,7 @@ public class HealerCodeManager
 
 	public List<RunPreset> getRunPresets()
 	{
-		List<RunPreset> presets = new ArrayList<>();
-		presets.addAll(builtIns.getRunPresets());
+		List<RunPreset> presets = new ArrayList<>(builtIns.getRunPresets());
 		presets.addAll(userStore.getRunPresets());
 		presets.sort(Comparator.comparing(RunPreset::isBuiltIn)
 				.thenComparing(HealerCodeManager::runPresetDisplayName, String.CASE_INSENSITIVE_ORDER));
@@ -303,10 +266,7 @@ public class HealerCodeManager
 
 		for (WaveCode userCode : userStore.getWaveCodes())
 		{
-			if (userCode == null || userCode.isBuiltIn() || isBuiltInWaveCodeId(userCode.getId()))
-			{
-				continue;
-			}
+			if (userCode == null || userCode.isBuiltIn() || isBuiltInWaveCodeId(userCode.getId())) continue;
 
 			waveCodes.add(userCode);
 		}
@@ -318,10 +278,7 @@ public class HealerCodeManager
 	{
 		RunPreset preset = findRunPreset(userStore.getActiveRunPresetId());
 
-		if (preset != null && preset.getWaveCodeIds().equals(userStore.getActiveWaveCodeIds()))
-		{
-			return preset.getId();
-		}
+		if (preset != null && preset.getWaveCodeIds().equals(userStore.getActiveWaveCodeIds())) return preset.getId();
 
 		preset = findMatchingRunPreset();
 
@@ -363,27 +320,18 @@ public class HealerCodeManager
 
 	public HealerCodeDefaultRole getDefaultRoleForPreset(String runPresetId)
 	{
-		if (isBlank(runPresetId))
-		{
-			return null;
-		}
+		if (isBlank(runPresetId)) return null;
 
 		for (HealerCodeDefaultRole role : HealerCodeDefaultRole.values())
 		{
-			if (runPresetId.equals(userStore.getDefaultRunPresetId(role)))
-			{
-				return role;
-			}
+			if (runPresetId.equals(userStore.getDefaultRunPresetId(role))) return role;
 		}
 		return null;
 	}
 
 	public boolean setDefaultRunPresetId(HealerCodeDefaultRole role, String runPresetId)
 	{
-		if (role == null || findRunPreset(runPresetId) == null)
-		{
-			return false;
-		}
+		if (role == null || findRunPreset(runPresetId) == null) return false;
 
 		clearDefaultRunPresetIdsForPreset(runPresetId);
 		userStore.setDefaultRunPresetId(role, runPresetId);
@@ -393,10 +341,7 @@ public class HealerCodeManager
 
 	public boolean clearDefaultRunPresetIdsForPreset(String runPresetId)
 	{
-		if (isBlank(runPresetId))
-		{
-			return false;
-		}
+		if (isBlank(runPresetId)) return false;
 
 		boolean removed = userStore.getDefaultRunPresetIds().values().removeIf(runPresetId::equals);
 		if (removed)
@@ -410,17 +355,11 @@ public class HealerCodeManager
 	{
 		String presetId = getDefaultRunPresetId(role);
 		RunPreset preset = findRunPreset(presetId);
-		if (preset == null)
-		{
-			return null;
-		}
+		if (preset == null) return null;
 
 		String activePresetId = userStore.getActiveRunPresetId();
-		Map<Integer, String> activeWaveCodeIds = new HashMap<>(userStore.getActiveWaveCodeIds());
-		if (presetId.equals(activePresetId) && preset.getWaveCodeIds().equals(activeWaveCodeIds))
-		{
-			return null;
-		}
+		Map<Integer, String> activeWaveCodeIds = userStore.getActiveWaveCodeIds();
+		if (presetId.equals(activePresetId) && preset.getWaveCodeIds().equals(activeWaveCodeIds)) return null;
 
 		applyRunPreset(presetId);
 		return preset;
@@ -430,17 +369,11 @@ public class HealerCodeManager
 	{
 		Map<Integer, String> activeWaveCodes = userStore.getActiveWaveCodeIds();
 
-		if (activeWaveCodes.isEmpty())
-		{
-			return null;
-		}
+		if (activeWaveCodes.isEmpty()) return null;
 
 		for (RunPreset preset : getRunPresets())
 		{
-			if (preset.getWaveCodeIds().equals(activeWaveCodes))
-			{
-				return preset;
-			}
+			if (preset.getWaveCodeIds().equals(activeWaveCodes)) return preset;
 		}
 
 		return null;
@@ -448,73 +381,28 @@ public class HealerCodeManager
 
 	public RunPreset findRunPreset(String id)
 	{
-		if (id == null)
-		{
-			return null;
-		}
-
-		for (RunPreset preset : getRunPresets())
-		{
-			if (id.equals(preset.getId()))
-			{
-				return preset;
-			}
-		}
-
-		return null;
+		return findById(getRunPresets(), id, RunPreset::getId);
 	}
 
 	public WaveCode findWaveCode(String id)
 	{
-		if (id == null)
-		{
-			return null;
-		}
-
-		for (WaveCode code : getWaveCodes())
-		{
-			if (id.equals(code.getId()))
-			{
-				return code;
-			}
-		}
-
-		return null;
+		return findById(getWaveCodes(), id, WaveCode::getId);
 	}
 
 	public WaveCode findBuiltInWaveCode(String id)
 	{
-		if (id == null)
-		{
-			return null;
-		}
-
-		for (WaveCode code : builtIns.getWaveCodes())
-		{
-			if (id.equals(code.getId()))
-			{
-				return code;
-			}
-		}
-
-		return null;
+		return findById(builtIns.getWaveCodes(), id, WaveCode::getId);
 	}
 
 	public WaveCode getActiveWaveCode(int wave)
 	{
 		WaveCode selectedWaveCode = findWaveCode(getActiveWaveCodeId(wave));
 
-		if (selectedWaveCode != null)
-		{
-			return selectedWaveCode;
-		}
+		if (selectedWaveCode != null) return selectedWaveCode;
 
 		RunPreset preset = getActiveRunPreset();
 
-		if (preset != null)
-		{
-			return findWaveCode(preset.getWaveCodeId(wave));
-		}
+		if (preset != null) return findWaveCode(preset.getWaveCodeId(wave));
 
 		return null;
 	}
@@ -539,7 +427,7 @@ public class HealerCodeManager
 	{
 		userStore.setActiveRunPresetId(null);
 
-		if (waveCodeId == null || waveCodeId.trim().isEmpty())
+		if (waveCodeId == null || waveCodeId.isBlank())
 		{
 			userStore.getActiveWaveCodeIds().remove(wave);
 		}
@@ -576,16 +464,6 @@ public class HealerCodeManager
 		return HealerCodeProgress.getExpectedFoodForOrder(getActiveWaveCode(wave), healerOrder, currentCallIndex);
 	}
 
-	public HealerCodeStatus getCurrentStatus(int wave, int healerOrder, int currentCallIndex, List<FeedEvent> feedEvents)
-	{
-		return HealerCodeProgress.getCurrentStatus(getActiveWaveCode(wave), healerOrder, currentCallIndex, feedEvents);
-	}
-
-	public HealerCodeStatus getPreviousStatus(int wave, int healerOrder, int currentCallIndex, List<FeedEvent> feedEvents)
-	{
-		return HealerCodeProgress.getPreviousStatus(getActiveWaveCode(wave), healerOrder, currentCallIndex, feedEvents);
-	}
-
 	public HealerCodeStatus getDisplayStatus(int wave, int healerOrder, int currentCallIndex, List<FeedEvent> feedEvents)
 	{
 		return HealerCodeProgress.getDisplayStatus(getActiveWaveCode(wave), healerOrder, currentCallIndex, feedEvents);
@@ -609,7 +487,7 @@ public class HealerCodeManager
 				existingPreset == null ? userId("preset", savedName) : existingPreset.getId(),
 				savedName,
 				false,
-				new HashMap<>(waveCodeIds)
+				waveCodeIds
 		);
 		upsertRunPreset(preset);
 		userStore.setActiveRunPresetId(preset.getId());
@@ -624,30 +502,10 @@ public class HealerCodeManager
 
 	public boolean deleteUserPreset(String id)
 	{
-		if (id == null)
-		{
-			return false;
-		}
+		if (id == null) return false;
 
-		boolean removed = false;
-		List<RunPreset> presets = new ArrayList<>();
-
-		for (RunPreset preset : userStore.getRunPresets())
-		{
-			if (id.equals(preset.getId()))
-			{
-				removed = true;
-			}
-			else
-			{
-				presets.add(preset);
-			}
-		}
-
-		if (!removed)
-		{
-			return false;
-		}
+		List<RunPreset> presets = new ArrayList<>(userStore.getRunPresets());
+		if (!presets.removeIf(preset -> id.equals(preset.getId()))) return false;
 
 		userStore.setRunPresets(presets);
 
@@ -664,17 +522,14 @@ public class HealerCodeManager
 
 	public boolean updateUserPreset(String id, String name, Map<Integer, String> waveCodeIds)
 	{
-		if (id == null || name == null || name.trim().isEmpty())
-		{
-			return false;
-		}
+		if (id == null || name == null || name.isBlank()) return false;
 
 		for (RunPreset preset : userStore.getRunPresets())
 		{
 			if (id.equals(preset.getId()))
 			{
 				preset.setName(name);
-				preset.setWaveCodeIds(new HashMap<>(waveCodeIds));
+				preset.setWaveCodeIds(waveCodeIds);
 				save();
 				return true;
 			}
@@ -685,10 +540,7 @@ public class HealerCodeManager
 
 	public WaveCode saveWaveCode(String selectedId, WaveCode draft)
 	{
-		if (draft == null || isBlank(draft.getName()))
-		{
-			return null;
-		}
+		if (draft == null || isBlank(draft.getName())) return null;
 
 		WaveCode builtIn = findBuiltInWaveCode(selectedId);
 		if (builtIn != null)
@@ -710,7 +562,7 @@ public class HealerCodeManager
 		if (existing != null)
 		{
 			WaveCode updated = copyWaveCode(draft, existing.getId(), false);
-			replaceStoredUserWaveCode(updated);
+			upsertStoredWaveCode(updated);
 			save();
 			return updated;
 		}
@@ -729,10 +581,7 @@ public class HealerCodeManager
 
 	public boolean resetBuiltInWaveCode(String id)
 	{
-		if (findBuiltInWaveCode(id) == null || !removeStoredWaveCode(id))
-		{
-			return false;
-		}
+		if (findBuiltInWaveCode(id) == null || !removeStoredWaveCode(id)) return false;
 
 		save();
 		return true;
@@ -740,30 +589,10 @@ public class HealerCodeManager
 
 	public boolean deleteUserWaveCode(String id)
 	{
-		if (id == null)
-		{
-			return false;
-		}
+		if (id == null) return false;
 
-		boolean removed = false;
-		List<WaveCode> waveCodes = new ArrayList<>();
-
-		for (WaveCode code : userStore.getWaveCodes())
-		{
-			if (id.equals(code.getId()))
-			{
-				removed = true;
-			}
-			else
-			{
-				waveCodes.add(code);
-			}
-		}
-
-		if (!removed)
-		{
-			return false;
-		}
+		List<WaveCode> waveCodes = new ArrayList<>(userStore.getWaveCodes());
+		if (!waveCodes.removeIf(code -> id.equals(code.getId()))) return false;
 
 		userStore.setWaveCodes(waveCodes);
 		userStore.getActiveWaveCodeIds().values().removeIf(id::equals);
@@ -779,15 +608,9 @@ public class HealerCodeManager
 
 	private HealerCodeExportResult importWaveCodeExport(WaveCode importedWaveCode, Integer expectedWave)
 	{
-		if (importedWaveCode == null || isBlank(importedWaveCode.getName()))
-		{
-			return null;
-		}
+		if (importedWaveCode == null || isBlank(importedWaveCode.getName())) return null;
 
-		if (expectedWave != null && importedWaveCode.getWave() != expectedWave)
-		{
-			return null;
-		}
+		if (expectedWave != null && importedWaveCode.getWave() != expectedWave) return null;
 
 		WaveCode saved = importWaveCode(importedWaveCode);
 		userStore.setActiveRunPresetId(null);
@@ -806,19 +629,13 @@ public class HealerCodeManager
 	private HealerCodeExportResult importRunPresetExport(HealerCodeExport imported)
 	{
 		RunPreset importedPreset = imported.getPreset();
-		if (importedPreset == null)
-		{
-			return null;
-		}
+		if (importedPreset == null) return null;
 
 		Map<String, WaveCode> importedWaveCodesById = new HashMap<>();
 		List<WaveCode> savedWaveCodes = new ArrayList<>();
 		for (WaveCode waveCode : imported.getWaveCodes())
 		{
-			if (waveCode == null || isBlank(waveCode.getId()) || isBlank(waveCode.getName()))
-			{
-				continue;
-			}
+			if (waveCode == null || isBlank(waveCode.getId()) || isBlank(waveCode.getName())) continue;
 
 			String importedWaveCodeId = waveCode.getId();
 			WaveCode saved = importWaveCode(waveCode);
@@ -831,10 +648,7 @@ public class HealerCodeManager
 		{
 			Integer wave = entry.getKey();
 			String importedReference = entry.getValue();
-			if (wave == null || isBlank(importedReference))
-			{
-				continue;
-			}
+			if (wave == null || isBlank(importedReference)) continue;
 
 			WaveCode waveCode = importedWaveCodesById.get(importedReference);
 			if (waveCode == null)
@@ -848,10 +662,7 @@ public class HealerCodeManager
 			}
 		}
 
-		if (localWaveCodeIds.isEmpty())
-		{
-			return null;
-		}
+		if (localWaveCodeIds.isEmpty()) return null;
 
 		if (isBlank(importedPreset.getName()))
 		{
@@ -888,13 +699,9 @@ public class HealerCodeManager
 		WaveCode candidate = copyWaveCode(importedWaveCode, null, false);
 		WaveCode existing = findMatchingWaveCode(candidate);
 
-		if (existing != null)
-		{
-			return existing;
-		}
+		if (existing != null) return existing;
 
 		candidate.setId(uniqueUserId("wave", candidate.getWave() + "-" + candidate.getName()));
-		candidate.setBuiltIn(false);
 		List<WaveCode> waveCodes = new ArrayList<>(userStore.getWaveCodes());
 		waveCodes.add(candidate);
 		userStore.setWaveCodes(waveCodes);
@@ -904,10 +711,7 @@ public class HealerCodeManager
 	private RunPreset importRunPreset(String name, Map<Integer, String> waveCodeIds)
 	{
 		RunPreset existing = findRunPresetByName(name);
-		if (existing != null && existing.getWaveCodeIds().equals(waveCodeIds))
-		{
-			return existing;
-		}
+		if (existing != null && existing.getWaveCodeIds().equals(waveCodeIds)) return existing;
 
 		String savedName = existing == null ? name : uniquePresetName(name);
 		RunPreset preset = new RunPreset(uniqueUserId("preset", savedName), savedName, false, waveCodeIds);
@@ -999,20 +803,6 @@ public class HealerCodeManager
 		code.setCalls(calls);
 	}
 
-	private void replaceStoredUserWaveCode(WaveCode updated)
-	{
-		List<WaveCode> waveCodes = new ArrayList<>(userStore.getWaveCodes());
-		for (int i = 0; i < waveCodes.size(); i++)
-		{
-			if (updated.getId().equals(waveCodes.get(i).getId()))
-			{
-				waveCodes.set(i, updated);
-				userStore.setWaveCodes(waveCodes);
-				return;
-			}
-		}
-	}
-
 	private void upsertStoredWaveCode(WaveCode updated)
 	{
 		List<WaveCode> waveCodes = new ArrayList<>(userStore.getWaveCodes());
@@ -1032,10 +822,7 @@ public class HealerCodeManager
 
 	private boolean removeStoredWaveCode(String id)
 	{
-		if (id == null)
-		{
-			return false;
-		}
+		if (id == null) return false;
 
 		List<WaveCode> waveCodes = new ArrayList<>(userStore.getWaveCodes());
 		boolean removed = waveCodes.removeIf(code -> code != null && id.equals(code.getId()));
@@ -1048,11 +835,6 @@ public class HealerCodeManager
 
 	private boolean sameWaveCodeContent(WaveCode first, WaveCode second)
 	{
-		if (first == null || second == null)
-		{
-			return first == second;
-		}
-
 		return first.getWave() == second.getWave()
 				&& sameText(first.getName(), second.getName())
 				&& first.getOverstock() == second.getOverstock()
@@ -1085,17 +867,11 @@ public class HealerCodeManager
 
 	private static CallCode callAt(List<CallCode> calls, int callIndex)
 	{
-		if (calls == null)
-		{
-			return null;
-		}
+		if (calls == null) return null;
 
 		for (CallCode call : calls)
 		{
-			if (call != null && call.getCallIndex() == callIndex)
-			{
-				return call;
-			}
+			if (call != null && call.getCallIndex() == callIndex) return call;
 		}
 		return null;
 	}
@@ -1128,10 +904,7 @@ public class HealerCodeManager
 
 	private static HealerInstruction instructionAt(List<HealerInstruction> instructions, int index)
 	{
-		if (instructions == null || index < 0 || index >= instructions.size() || instructions.get(index) == null)
-		{
-			return new HealerInstruction();
-		}
+		if (instructions == null || index >= instructions.size() || instructions.get(index) == null) return new HealerInstruction();
 		return instructions.get(index);
 	}
 
@@ -1193,25 +966,14 @@ public class HealerCodeManager
 
 	private WaveCode findSummaryWaveCode(String reference, List<WaveCode> waveCodes)
 	{
-		WaveCode waveCode = findWaveCode(reference);
-		if (waveCode != null)
-		{
-			return waveCode;
-		}
+		if (reference == null) return null;
 
-		if (waveCodes == null)
-		{
-			return null;
-		}
+		WaveCode waveCode = findWaveCode(reference);
+		if (waveCode != null) return waveCode;
 
 		for (WaveCode candidate : waveCodes)
 		{
-			if (candidate != null
-					&& reference != null
-					&& reference.equals(candidate.getId()))
-			{
-				return candidate;
-			}
+			if (reference.equals(candidate.getId())) return candidate;
 		}
 		return null;
 	}
@@ -1232,35 +994,26 @@ public class HealerCodeManager
 
 	private WaveCode findStoredUserWaveCode(String id)
 	{
-		if (id == null)
-		{
-			return null;
-		}
+		return findById(userStore.getWaveCodes(), id, WaveCode::getId);
+	}
 
-		for (WaveCode code : userStore.getWaveCodes())
+	private static <T> T findById(List<T> values, String id, Function<T, String> idGetter)
+	{
+		if (id == null) return null;
+		for (T value : values)
 		{
-			if (id.equals(code.getId()))
-			{
-				return code;
-			}
+			if (value != null && id.equals(idGetter.apply(value))) return value;
 		}
-
 		return null;
 	}
 
 	private RunPreset findRunPresetByName(String name)
 	{
-		if (isBlank(name))
-		{
-			return null;
-		}
+		if (isBlank(name)) return null;
 
 		for (RunPreset preset : getRunPresets())
 		{
-			if (sameName(name, preset.getName()))
-			{
-				return preset;
-			}
+			if (sameName(name, preset.getName())) return preset;
 		}
 
 		return null;
@@ -1268,17 +1021,11 @@ public class HealerCodeManager
 
 	private RunPreset findStoredUserRunPresetByName(String name)
 	{
-		if (isBlank(name))
-		{
-			return null;
-		}
+		if (isBlank(name)) return null;
 
 		for (RunPreset preset : userStore.getRunPresets())
 		{
-			if (sameName(name, preset.getName()))
-			{
-				return preset;
-			}
+			if (sameName(name, preset.getName())) return preset;
 		}
 
 		return null;
@@ -1286,17 +1033,9 @@ public class HealerCodeManager
 
 	private WaveCode findMatchingWaveCode(WaveCode candidate)
 	{
-		if (candidate == null)
-		{
-			return null;
-		}
-
 		for (WaveCode code : getWaveCodes())
 		{
-			if (sameWaveCodeContent(code, candidate))
-			{
-				return code;
-			}
+			if (sameWaveCodeContent(code, candidate)) return code;
 		}
 		return null;
 	}
@@ -1316,11 +1055,6 @@ public class HealerCodeManager
 		return value == null ? "" : value.trim();
 	}
 
-	private static String normalizedExportName(String name)
-	{
-		return isBlank(name) ? null : name.trim();
-	}
-
 	public static String runPresetDisplayName(RunPreset preset)
 	{
 		return preset == null || isBlank(preset.getName()) ? "unnamed run preset" : preset.getName().trim();
@@ -1335,7 +1069,7 @@ public class HealerCodeManager
 
 	private static boolean isBlank(String value)
 	{
-		return value == null || value.trim().isEmpty();
+		return value == null || value.isBlank();
 	}
 
 	private static boolean isBuiltInWaveCodeId(String id)
