@@ -15,13 +15,13 @@ import com.bahealerorder.healer.HealerCodeManager;
 import com.bahealerorder.healer.codes.HealerCodeFormatter;
 import com.bahealerorder.healer.codes.WaveCode;
 import com.bahealerorder.sidepanel.BaNotesPreviewPanel;
+import com.bahealerorder.sidepanel.BaPanelUi;
 import com.bahealerorder.tilemarkers.GeneralTileMarkerStrategyManager;
 import com.bahealerorder.tilemarkers.TileMarkerRoleContext;
 import java.awt.AlphaComposite;
 import java.awt.BasicStroke;
 import java.awt.BorderLayout;
 import java.awt.Color;
-import java.awt.Component;
 import java.awt.Dimension;
 import java.awt.Font;
 import java.awt.Graphics2D;
@@ -39,7 +39,6 @@ import javax.swing.BoxLayout;
 import javax.swing.ImageIcon;
 import javax.swing.JButton;
 import javax.swing.JCheckBoxMenuItem;
-import javax.swing.JComponent;
 import javax.swing.JLabel;
 import javax.swing.JPanel;
 import javax.swing.JPopupMenu;
@@ -47,9 +46,9 @@ import javax.swing.JTextPane;
 import javax.swing.SwingConstants;
 import javax.swing.SwingUtilities;
 import javax.swing.border.EmptyBorder;
-import javax.swing.text.SimpleAttributeSet;
 import javax.swing.text.StyleConstants;
-import javax.swing.text.StyledDocument;
+import lombok.AccessLevel;
+import lombok.AllArgsConstructor;
 import net.runelite.api.gameval.SpriteID;
 import net.runelite.client.config.ConfigManager;
 import net.runelite.client.game.ItemManager;
@@ -58,7 +57,6 @@ import net.runelite.client.ui.ColorScheme;
 import net.runelite.client.ui.DynamicGridLayout;
 import net.runelite.client.ui.FontManager;
 import net.runelite.client.ui.PluginPanel;
-import net.runelite.client.util.AsyncBufferedImage;
 import net.runelite.client.util.SwingUtil;
 
 @Singleton
@@ -96,7 +94,7 @@ public class WaveOverviewPanel extends JPanel
 	private final WaveOverviewSelectorPanel selectorPanel;
 	private final Map<BaOverviewNpcType, ImageIcon> overviewIcons = new EnumMap<>(BaOverviewNpcType.class);
 	private final JLabel titleLabel = label("Wave Overview", true);
-	private final JPanel contentPanel = verticalPanel(ColorScheme.DARKER_GRAY_COLOR);
+	private final JPanel contentPanel = BaPanelUi.verticalPanel(ColorScheme.DARKER_GRAY_COLOR, CONTENT_WIDTH - 16);
 
 	private boolean loadingSkullIcon;
 	private ImageIcon skullIcon;
@@ -133,8 +131,6 @@ public class WaveOverviewPanel extends JPanel
 		setLayout(new BoxLayout(this, BoxLayout.Y_AXIS));
 		setAlignmentX(LEFT_ALIGNMENT);
 		setMaximumSize(new Dimension(CONTENT_WIDTH, Integer.MAX_VALUE));
-		contentPanel.setAlignmentX(LEFT_ALIGNMENT);
-		contentPanel.setMaximumSize(new Dimension(CONTENT_WIDTH - 16, Integer.MAX_VALUE));
 		add(createWaveOverviewSection());
 		refreshAll();
 	}
@@ -145,10 +141,7 @@ public class WaveOverviewPanel extends JPanel
 		BaWaveOverviewSnapshot snapshot = store.getSelectedSnapshot();
 		String signature = buildRenderSignature(snapshot);
 
-		if (signature.equals(lastRenderSignature))
-		{
-			return;
-		}
+		if (signature.equals(lastRenderSignature)) return;
 
 		lastRenderSignature = signature;
 		titleLabel.setText(getTitleText(snapshot));
@@ -204,7 +197,8 @@ public class WaveOverviewPanel extends JPanel
 		if (snapshot.getDuration() != null)
 		{
 			section.add(Box.createVerticalStrut(6));
-			section.add(centeredLabelRow("Duration: " + snapshot.getDuration(), false, ColorScheme.DARKER_GRAY_COLOR));
+			section.add(BaPanelUi.centeredLabelRow(
+					"Duration: " + snapshot.getDuration(), false, ColorScheme.DARKER_GRAY_COLOR, CONTENT_WIDTH, CONTROL_HEIGHT));
 		}
 
 		BaWaveOverviewRun selectedRun = store.getSelectedRun();
@@ -220,14 +214,12 @@ public class WaveOverviewPanel extends JPanel
 	private JPanel createWaveOverviewColumn(BaWaveOverviewSnapshot snapshot, BaOverviewNpcType type, int columnCount)
 	{
 		int columnWidth = getWaveOverviewColumnWidth(columnCount);
-		JPanel panel = verticalPanel(ColorScheme.DARKER_GRAY_COLOR.darker());
+		JPanel panel = BaPanelUi.verticalPanel(ColorScheme.DARKER_GRAY_COLOR.darker());
 		panel.setBorder(new EmptyBorder(4, 2, 4, 2));
 
 		JLabel icon = new JLabel(loadOverviewIcon(type));
 		icon.setHorizontalAlignment(SwingConstants.CENTER);
-		icon.setAlignmentX(LEFT_ALIGNMENT);
-		icon.setPreferredSize(new Dimension(columnWidth, OVERVIEW_ICON_SIZE));
-		icon.setMaximumSize(new Dimension(columnWidth, OVERVIEW_ICON_SIZE));
+		BaPanelUi.fixedSize(icon, columnWidth, OVERVIEW_ICON_SIZE);
 		panel.add(icon);
 		panel.add(Box.createVerticalStrut(OVERVIEW_HEADER_GAP));
 
@@ -243,15 +235,9 @@ public class WaveOverviewPanel extends JPanel
 
 	private String formatWaveOverviewLabel(String label)
 	{
-		if (label == null)
-		{
-			return "";
-		}
+		if (label == null) return "";
 
-		if (label.matches("^\\(R\\d+\\)$"))
-		{
-			return label.substring(1, label.length() - 1);
-		}
+		if (label.matches("^\\(R\\d+\\)$")) return label.substring(1, label.length() - 1);
 
 		return label.replaceFirst("\\s*\\(R\\d+\\)$", "");
 	}
@@ -264,10 +250,9 @@ public class WaveOverviewPanel extends JPanel
 				? ColorScheme.DARKER_GRAY_COLOR.darker()
 				: ColorScheme.DARKER_GRAY_COLOR.darker().darker();
 
-		JPanel content = verticalPanel(background);
+		JPanel content = BaPanelUi.verticalPanel(background);
 		content.setBorder(new EmptyBorder(4, 0, 2, 0));
-		content.setPreferredSize(new Dimension(width, OVERVIEW_CELL_HEIGHT));
-		content.setMaximumSize(new Dimension(width, OVERVIEW_CELL_HEIGHT));
+		BaPanelUi.fixedSize(content, width, OVERVIEW_CELL_HEIGHT);
 
 		if (entry.dead)
 		{
@@ -298,21 +283,12 @@ public class WaveOverviewPanel extends JPanel
 	private EntryState getEntryState(BaWaveOverviewSnapshot snapshot, BaOverviewNpcType type, int order)
 	{
 		Integer deathTick = snapshot.getDeathTick(type, order);
-		if (deathTick != null)
-		{
-			return EntryState.dead(formatWaveTick(deathTick));
-		}
+		if (deathTick != null) return EntryState.dead(formatWaveTick(deathTick));
 
 		Integer predictedDeathTick = snapshot.getPredictedDeathTick(type, order);
-		if (predictedDeathTick != null)
-		{
-			return EntryState.predicted(formatWaveTick(predictedDeathTick));
-		}
+		if (predictedDeathTick != null) return EntryState.predicted(formatWaveTick(predictedDeathTick));
 
-		if (snapshot.hasUnknownTtk(type, order))
-		{
-			return EntryState.predicted("?");
-		}
+		if (snapshot.hasUnknownTtk(type, order)) return EntryState.predicted("?");
 
 		return snapshot.hasSpawned(type, order) ? EntryState.spawned() : EntryState.pending();
 	}
@@ -327,9 +303,7 @@ public class WaveOverviewPanel extends JPanel
 		JLabel label = label(text, bold);
 		label.setForeground(color);
 		label.setHorizontalAlignment(SwingConstants.CENTER);
-		label.setPreferredSize(new Dimension(width, height));
-		label.setMinimumSize(new Dimension(width, height));
-		label.setMaximumSize(new Dimension(width, height));
+		BaPanelUi.fixedSize(label, width, height);
 		return label;
 	}
 
@@ -338,7 +312,7 @@ public class WaveOverviewPanel extends JPanel
 		JButton menuButton = new JButton(createHamburgerIcon());
 		menuButton.setToolTipText("Choose NPC columns");
 		SwingUtil.removeButtonDecorations(menuButton);
-		fixedSize(menuButton, CONTROL_HEIGHT + 4, CONTROL_HEIGHT);
+		BaPanelUi.fixedSize(menuButton, CONTROL_HEIGHT + 4, CONTROL_HEIGHT);
 		menuButton.addActionListener(event -> createColumnMenu().show(menuButton, 0, menuButton.getHeight()));
 		return menuButton;
 	}
@@ -383,10 +357,7 @@ public class WaveOverviewPanel extends JPanel
 	{
 		ImageIcon icon = overviewIcons.get(type);
 
-		if (icon != null)
-		{
-			return icon;
-		}
+		if (icon != null) return icon;
 
 		icon = new ImageIcon(new ImageIcon(getClass().getResource(OVERVIEW_ICON_RESOURCE_PATH + getIconResource(type)))
 				.getImage()
@@ -431,10 +402,7 @@ public class WaveOverviewPanel extends JPanel
 			return;
 		}
 
-		if (loadingSkullIcon)
-		{
-			return;
-		}
+		if (loadingSkullIcon) return;
 
 		loadingSkullIcon = true;
 		spriteManager.getSpriteAsync(SpriteID.HEADICONS_PK, 0, image ->
@@ -449,10 +417,7 @@ public class WaveOverviewPanel extends JPanel
 
 	private ImageIcon getScaledSkullIcon(int size)
 	{
-		if (skullIcon == null || size == OVERVIEW_MAX_SKULL_ICON_SIZE)
-		{
-			return skullIcon;
-		}
+		if (skullIcon == null || size == OVERVIEW_MAX_SKULL_ICON_SIZE) return skullIcon;
 
 		return new ImageIcon(skullIcon.getImage().getScaledInstance(size, size, Image.SCALE_SMOOTH));
 	}
@@ -537,10 +502,7 @@ public class WaveOverviewPanel extends JPanel
 
 	private String getTitleText(BaWaveOverviewSnapshot snapshot)
 	{
-		if (!BaWaveInfo.isValidWave(snapshot == null ? -1 : snapshot.getWave()))
-		{
-			return "Recent Runs";
-		}
+		if (!BaWaveInfo.isValidWave(snapshot == null ? -1 : snapshot.getWave())) return "Recent Runs";
 
 		return store.isSelectedWaveInProgress()
 				? "Wave " + snapshot.getWave() + " In Progress..."
@@ -549,53 +511,18 @@ public class WaveOverviewPanel extends JPanel
 
 	private JPanel section()
 	{
-		JPanel panel = verticalPanel(ColorScheme.DARKER_GRAY_COLOR);
-		panel.setBorder(new EmptyBorder(8, 8, 8, 8));
-		panel.setMaximumSize(new Dimension(CONTENT_WIDTH, Integer.MAX_VALUE));
-		panel.setAlignmentX(LEFT_ALIGNMENT);
-		panel.add(centeredLabelRow(titleLabel, ColorScheme.DARKER_GRAY_COLOR));
-		panel.add(Box.createVerticalStrut(6));
-		return panel;
-	}
-
-	private JPanel centeredLabelRow(String text, boolean bold, Color background)
-	{
-		JLabel label = label(text, bold);
-		return centeredLabelRow(label, background);
-	}
-
-	private JPanel centeredLabelRow(JLabel label, Color background)
-	{
-		label.setHorizontalAlignment(SwingConstants.CENTER);
-
-		JPanel row = new JPanel(new BorderLayout());
-		row.setBackground(background);
-		fixedSize(row, CONTENT_WIDTH - 16, CONTROL_HEIGHT);
-		row.add(label, BorderLayout.CENTER);
-		return row;
+		return BaPanelUi.section(titleLabel, CONTENT_WIDTH, CONTROL_HEIGHT);
 	}
 
 	private JPanel centeredMessage(String text)
 	{
-		JTextPane message = new JTextPane();
-		message.setText(text);
-		message.setForeground(ColorScheme.TEXT_COLOR);
+		int height = getMessageHeight(text);
+		JTextPane message = BaPanelUi.textBlock(text, CONTENT_WIDTH - 16, height, StyleConstants.ALIGN_CENTER);
 		message.setFont(LABEL_FONT);
-		message.setEditable(false);
-		message.setFocusable(false);
-		message.setOpaque(false);
-
-		StyledDocument document = message.getStyledDocument();
-		SimpleAttributeSet center = new SimpleAttributeSet();
-		StyleConstants.setAlignment(center, StyleConstants.ALIGN_CENTER);
-		document.setParagraphAttributes(0, document.getLength(), center, false);
 
 		JPanel panel = new JPanel(new BorderLayout());
 		panel.setBackground(ColorScheme.DARKER_GRAY_COLOR);
-		int height = getMessageHeight(text);
-		panel.setPreferredSize(new Dimension(CONTENT_WIDTH - 16, height));
-		panel.setMaximumSize(new Dimension(CONTENT_WIDTH - 16, height));
-		panel.setAlignmentX(LEFT_ALIGNMENT);
+		BaPanelUi.fixedSize(panel, CONTENT_WIDTH - 16, height);
 		panel.add(message, BorderLayout.CENTER);
 		return panel;
 	}
@@ -603,36 +530,25 @@ public class WaveOverviewPanel extends JPanel
 	private void addActiveNotes(JPanel section, BaWaveOverviewSnapshot snapshot)
 	{
 		String notes = getActiveNotes(snapshot);
-		if (isBlank(notes))
-		{
-			return;
-		}
+		if (isBlank(notes)) return;
 
 		section.add(Box.createVerticalStrut(12));
-		section.add(createNotesPanel(getNotesHeading(snapshot), notes, getCurrentRoleColor(), getCurrentWaveTick()));
+		section.add(BaNotesPreviewPanel.create(
+				getNotesHeading(snapshot), notes, getCurrentRoleColor(), CONTENT_WIDTH - 16, getCurrentWaveTick()));
 	}
 
 	private String getActiveNotes(BaWaveOverviewSnapshot snapshot)
 	{
-		if (snapshot == null || !store.isSelectedWaveInProgress())
-		{
-			return "";
-		}
+		if (snapshot == null || !store.isSelectedWaveInProgress()) return "";
 
 		TileMarkerRoleContext context = getDisplayRoleContext();
 		String notes = strategyManager.getActiveNotes(snapshot.getWave(), context);
 		String codeText = getActiveHealerCodeText(snapshot);
 		notes = notes == null ? "" : notes.trim();
 
-		if (isBlank(codeText))
-		{
-			return notes;
-		}
+		if (isBlank(codeText)) return notes;
 
-		if (isBlank(notes))
-		{
-			return codeText;
-		}
+		if (isBlank(notes)) return codeText;
 
 		return codeText + "\n\n" + notes;
 	}
@@ -640,10 +556,7 @@ public class WaveOverviewPanel extends JPanel
 	private String getNotesHeading(BaWaveOverviewSnapshot snapshot)
 	{
 		String codeName = getActiveHealerCodeName(snapshot);
-		if (!isBlank(codeName))
-		{
-			return codeName;
-		}
+		if (!isBlank(codeName)) return codeName;
 
 		String strategyName = getActiveStrategyName(snapshot);
 		return (isBlank(strategyName) ? "Strategy" : strategyName) + " Notes";
@@ -651,10 +564,7 @@ public class WaveOverviewPanel extends JPanel
 
 	private String getActiveHealerCodeText(BaWaveOverviewSnapshot snapshot)
 	{
-		if (snapshot == null || !store.isSelectedWaveInProgress() || !roleDetector.isRole(BaRole.HEALER))
-		{
-			return "";
-		}
+		if (snapshot == null || !store.isSelectedWaveInProgress() || !roleDetector.isRole(BaRole.HEALER)) return "";
 
 		WaveCode code = healerCodeManager.getActiveWaveCode(snapshot.getWave());
 		return code == null ? "" : HealerCodeFormatter.formatDisplay(code).trim();
@@ -662,10 +572,7 @@ public class WaveOverviewPanel extends JPanel
 
 	private String getActiveHealerCodeName(BaWaveOverviewSnapshot snapshot)
 	{
-		if (snapshot == null || !store.isSelectedWaveInProgress() || !roleDetector.isRole(BaRole.HEALER))
-		{
-			return "";
-		}
+		if (snapshot == null || !store.isSelectedWaveInProgress() || !roleDetector.isRole(BaRole.HEALER)) return "";
 
 		WaveCode code = healerCodeManager.getActiveWaveCode(snapshot.getWave());
 		return code == null ? "" : HealerCodeManager.waveCodeDisplayName(code);
@@ -673,10 +580,7 @@ public class WaveOverviewPanel extends JPanel
 
 	private String getActiveStrategyName(BaWaveOverviewSnapshot snapshot)
 	{
-		if (snapshot == null || !store.isSelectedWaveInProgress())
-		{
-			return "";
-		}
+		if (snapshot == null || !store.isSelectedWaveInProgress()) return "";
 
 		TileMarkerRoleContext context = getDisplayRoleContext();
 		return strategyManager.getActiveStrategyName(snapshot.getWave(), context);
@@ -704,29 +608,16 @@ public class WaveOverviewPanel extends JPanel
 		return Math.max(0, Math.round(waveLifecycleService.getElapsedTimeMs() / 600f));
 	}
 
-	private JPanel createNotesPanel(String headingText, String notes, Color headingColor, int currentWaveTick)
-	{
-		return BaNotesPreviewPanel.create(headingText, notes, headingColor, CONTENT_WIDTH - 16, currentWaveTick);
-	}
-
 	private JPanel createRunMetadataPanel(BaWaveOverviewRun run, boolean showMissingDuration)
 	{
-		if (run == null)
-		{
-			return centeredMessage("Select a wave to view.");
-		}
+		if (run == null) return centeredMessage("Select a wave to view.");
 
-		if (!showMissingDuration && run.getRoundDuration() == null)
-		{
-			return verticalPanel(ColorScheme.DARKER_GRAY_COLOR);
-		}
+		if (!showMissingDuration && run.getRoundDuration() == null) return BaPanelUi.verticalPanel(ColorScheme.DARKER_GRAY_COLOR);
 
 		List<BaTeamMember> members = run.getTeamMembers();
-		JPanel panel = verticalPanel(ColorScheme.DARKER_GRAY_COLOR);
+		JPanel panel = BaPanelUi.verticalPanel(ColorScheme.DARKER_GRAY_COLOR);
 		int height = Math.max(CONTROL_HEIGHT * 2, CONTROL_HEIGHT * (members.size() + 1) + (members.isEmpty() ? 0 : 10));
-		panel.setPreferredSize(new Dimension(CONTENT_WIDTH - 16, height));
-		panel.setMaximumSize(new Dimension(CONTENT_WIDTH - 16, height));
-		panel.setAlignmentX(LEFT_ALIGNMENT);
+		BaPanelUi.fixedSize(panel, CONTENT_WIDTH - 16, height);
 
 		for (BaTeamMember member : members)
 		{
@@ -750,7 +641,7 @@ public class WaveOverviewPanel extends JPanel
 
 	private static boolean isBlank(String value)
 	{
-		return value == null || value.trim().isEmpty();
+		return value == null || value.isBlank();
 	}
 
 	private JPanel metadataMemberRow(BaTeamMember member)
@@ -761,41 +652,16 @@ public class WaveOverviewPanel extends JPanel
 		JPanel namePanel = new JPanel();
 		namePanel.setLayout(new BoxLayout(namePanel, BoxLayout.X_AXIS));
 		namePanel.setBackground(ColorScheme.DARKER_GRAY_COLOR);
-		namePanel.add(roleIconLabel(member.getRole()));
+		namePanel.add(BaPanelUi.roleIconLabel(itemManager, member.getRole(), ROLE_ICON_SIZE, CONTROL_HEIGHT));
 		namePanel.add(Box.createHorizontalStrut(5));
 		namePanel.add(nameLabel);
 
 		JPanel row = new JPanel(new BorderLayout());
 		row.setBackground(ColorScheme.DARKER_GRAY_COLOR);
-		row.setPreferredSize(new Dimension(CONTENT_WIDTH - 16, CONTROL_HEIGHT));
-		row.setMaximumSize(new Dimension(CONTENT_WIDTH - 16, CONTROL_HEIGHT));
-		row.setAlignmentX(LEFT_ALIGNMENT);
+		BaPanelUi.fixedSize(row, CONTENT_WIDTH - 16, CONTROL_HEIGHT);
 		row.add(namePanel, BorderLayout.CENTER);
 
 		return row;
-	}
-
-	private JLabel roleIconLabel(String roleName)
-	{
-		JLabel iconLabel = new JLabel();
-		iconLabel.setPreferredSize(new Dimension(ROLE_ICON_SIZE, CONTROL_HEIGHT));
-		iconLabel.setMaximumSize(new Dimension(ROLE_ICON_SIZE, CONTROL_HEIGHT));
-		iconLabel.setHorizontalAlignment(SwingConstants.CENTER);
-
-		BaRole role = BaRole.fromDisplayName(roleName);
-
-		if (role != null)
-		{
-			AsyncBufferedImage icon = itemManager.getImage(role.getPlayerIconItemId());
-			icon.onLoaded(() -> SwingUtilities.invokeLater(() -> iconLabel.setIcon(scaledRoleIcon(icon))));
-		}
-
-		return iconLabel;
-	}
-
-	private ImageIcon scaledRoleIcon(BufferedImage image)
-	{
-		return new ImageIcon(image.getScaledInstance(ROLE_ICON_SIZE, ROLE_ICON_SIZE, Image.SCALE_SMOOTH));
 	}
 
 	private JPanel roundDurationRow(String duration)
@@ -807,9 +673,7 @@ public class WaveOverviewPanel extends JPanel
 		JPanel row = new JPanel();
 		row.setLayout(new BoxLayout(row, BoxLayout.X_AXIS));
 		row.setBackground(ColorScheme.DARKER_GRAY_COLOR);
-		row.setPreferredSize(new Dimension(CONTENT_WIDTH - 16, CONTROL_HEIGHT));
-		row.setMaximumSize(new Dimension(CONTENT_WIDTH - 16, CONTROL_HEIGHT));
-		row.setAlignmentX(LEFT_ALIGNMENT);
+		BaPanelUi.fixedSize(row, CONTENT_WIDTH - 16, CONTROL_HEIGHT);
 		row.add(label);
 		row.add(value);
 		return row;
@@ -824,23 +688,7 @@ public class WaveOverviewPanel extends JPanel
 		return label;
 	}
 
-	private static JPanel verticalPanel(Color background)
-	{
-		JPanel panel = new JPanel();
-		panel.setLayout(new BoxLayout(panel, BoxLayout.Y_AXIS));
-		panel.setBackground(background);
-		return panel;
-	}
-
-	private static void fixedSize(JComponent component, int width, int height)
-	{
-		Dimension size = new Dimension(width, height);
-		component.setPreferredSize(size);
-		component.setMinimumSize(size);
-		component.setMaximumSize(size);
-		component.setAlignmentX(Component.LEFT_ALIGNMENT);
-	}
-
+	@AllArgsConstructor(access = AccessLevel.PRIVATE)
 	private static class EntryState
 	{
 		private final boolean spawned;
@@ -867,15 +715,6 @@ public class WaveOverviewPanel extends JPanel
 		private static EntryState predicted(String text)
 		{
 			return new EntryState(true, false, ColorScheme.TEXT_COLOR, Color.ORANGE, text);
-		}
-
-		private EntryState(boolean spawned, boolean dead, Color labelColor, Color color, String text)
-		{
-			this.spawned = spawned;
-			this.dead = dead;
-			this.labelColor = labelColor;
-			this.color = color;
-			this.text = text;
 		}
 	}
 }
