@@ -1,5 +1,8 @@
 package com.bahealerorder.tilemarkers;
 
+import static com.bahealerorder.tilemarkers.TileMarkerExportSummary.markerSetDisplayName;
+import static com.bahealerorder.tilemarkers.TileMarkerExportSummary.strategyPresetDisplayName;
+
 import com.bahealerorder.BaUtilitiesConfig;
 import com.bahealerorder.common.BaRole;
 import com.bahealerorder.common.TileMarkerStyle;
@@ -12,6 +15,7 @@ import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.function.Function;
 import javax.inject.Inject;
 import javax.inject.Singleton;
 import net.runelite.client.config.ConfigManager;
@@ -40,7 +44,7 @@ public class GeneralTileMarkerStrategyManager
 	public void load()
 	{
 		String json = configManager.getConfiguration(BaUtilitiesConfig.GROUP_NAME, STRATEGY_STORE_KEY);
-		if (json == null || json.trim().isEmpty())
+		if (json == null || json.isBlank())
 		{
 			store = new TileMarkerStrategyStore();
 			save();
@@ -71,28 +75,14 @@ public class GeneralTileMarkerStrategyManager
 		List<TileMarkerSet> sets = new ArrayList<>();
 		for (TileMarkerSet set : store.getMarkerSets())
 		{
-			if (set != null && set.getWaveMap() == resolvedWaveMap)
+			if (set.getWaveMap() == resolvedWaveMap)
 			{
 				sets.add(set);
 			}
 		}
 		for (TileMarkerSet set : builtInMarkerSets)
 		{
-			if (set != null && set.getWaveMap() == resolvedWaveMap)
-			{
-				sets.add(set);
-			}
-		}
-		return sets;
-	}
-
-	public List<TileMarkerSet> getUserMarkerSets(TileMarkerWaveMap waveMap)
-	{
-		TileMarkerWaveMap resolvedWaveMap = resolveWaveMap(waveMap);
-		List<TileMarkerSet> sets = new ArrayList<>();
-		for (TileMarkerSet set : store.getMarkerSets())
-		{
-			if (set != null && set.getWaveMap() == resolvedWaveMap)
+			if (set.getWaveMap() == resolvedWaveMap)
 			{
 				sets.add(set);
 			}
@@ -102,28 +92,8 @@ public class GeneralTileMarkerStrategyManager
 
 	public TileMarkerSet findMarkerSet(String id)
 	{
-		if (id == null)
-		{
-			return null;
-		}
-
-		for (TileMarkerSet set : builtInMarkerSets)
-		{
-			if (id.equals(set.getId()))
-			{
-				return set;
-			}
-		}
-
-		for (TileMarkerSet set : store.getMarkerSets())
-		{
-			if (set != null && id.equals(set.getId()))
-			{
-				return set;
-			}
-		}
-
-		return null;
+		TileMarkerSet builtIn = findBuiltInMarkerSet(id);
+		return builtIn == null ? findUserMarkerSet(id) : builtIn;
 	}
 
 	public TileMarkerSet createMarkerSet(
@@ -133,7 +103,6 @@ public class GeneralTileMarkerStrategyManager
 			List<TileMarker> markers)
 	{
 		TileMarkerSet set = new TileMarkerSet(userMarkerSetId(), name, mapMode, resolveWaveMap(waveMap), markers);
-		set.setBuiltIn(false);
 		store.getMarkerSets().add(set);
 		setLastMapMode(mapMode);
 		setLastWaveMap(waveMap);
@@ -149,15 +118,11 @@ public class GeneralTileMarkerStrategyManager
 			List<TileMarker> markers)
 	{
 		TileMarkerSet set = findUserMarkerSet(id);
-		if (set == null)
-		{
-			return false;
-		}
+		if (set == null) return false;
 
 		set.setName(name);
 		set.setMapMode(mapMode);
 		set.setWaveMap(resolveWaveMap(waveMap));
-		set.setBuiltIn(false);
 		set.setMarkers(markers);
 		setLastMapMode(mapMode);
 		setLastWaveMap(waveMap);
@@ -167,23 +132,10 @@ public class GeneralTileMarkerStrategyManager
 
 	public void deleteMarkerSet(String id)
 	{
-		if (id == null)
-		{
-			return;
-		}
-
-		if (findUserMarkerSet(id) == null)
-		{
-			return;
-		}
-
-		store.getMarkerSets().removeIf(set -> id.equals(set.getId()));
+		if (id == null || !store.getMarkerSets().removeIf(set -> id.equals(set.getId()))) return;
 		for (TileMarkerStrategyPreset preset : store.getStrategyPresets())
 		{
-			if (preset != null)
-			{
-				preset.setMarkerSetIds(without(preset.getMarkerSetIds(), id));
-			}
+			preset.setMarkerSetIds(without(preset.getMarkerSetIds(), id));
 		}
 		save();
 	}
@@ -191,10 +143,7 @@ public class GeneralTileMarkerStrategyManager
 	public TileMarkerWaveSelection getWaveSelection(TileMarkerRoleContext context, int wave)
 	{
 		TileMarkerWaveSelection selection = findWaveSelection(context, wave);
-		if (selection != null)
-		{
-			return selection;
-		}
+		if (selection != null) return selection;
 
 		TileMarkerWaveSelection created = new TileMarkerWaveSelection(waveSelectionId(context, wave), context, wave);
 		store.getWaveSelections().add(created);
@@ -207,10 +156,7 @@ public class GeneralTileMarkerStrategyManager
 		TileMarkerRoleContext resolvedContext = resolveContext(context);
 		for (TileMarkerWaveSelection selection : store.getWaveSelections())
 		{
-			if (selection.getRoleContext() == resolvedContext && selection.getWave() == wave)
-			{
-				return selection;
-			}
+			if (selection.getRoleContext() == resolvedContext && selection.getWave() == wave) return selection;
 		}
 
 		return null;
@@ -228,18 +174,14 @@ public class GeneralTileMarkerStrategyManager
 		if (isBlank(strategyId))
 		{
 			store.getWaveSelections().removeIf(selection ->
-					selection != null
-							&& selection.getRoleContext() == resolvedContext
+					selection.getRoleContext() == resolvedContext
 							&& selection.getWave() == wave);
 			store.setActiveAssignmentPresetId(resolvedContext, null);
 			save();
 			return;
 		}
 
-		if (!strategyMatchesWave(wave, strategyId))
-		{
-			return;
-		}
+		if (!strategyMatchesWave(wave, strategyId)) return;
 
 		TileMarkerWaveSelection selection = getWaveSelection(resolvedContext, wave);
 		selection.setStrategyId(strategyId);
@@ -260,8 +202,7 @@ public class GeneralTileMarkerStrategyManager
 		List<TileMarkerStrategyPreset> presets = new ArrayList<>();
 		for (TileMarkerStrategyPreset preset : store.getStrategyPresets())
 		{
-			if (preset != null
-					&& preset.getWaveMap() == resolvedWaveMap
+			if (preset.getWaveMap() == resolvedWaveMap
 					&& !preset.isBuiltIn()
 					&& findBuiltInStrategyPreset(preset.getId()) == null)
 			{
@@ -277,7 +218,7 @@ public class GeneralTileMarkerStrategyManager
 		List<TileMarkerStrategyPreset> presets = new ArrayList<>();
 		for (TileMarkerStrategyPreset preset : builtInStrategyPresets)
 		{
-			if (preset != null && preset.getWaveMap() == resolvedWaveMap)
+			if (preset.getWaveMap() == resolvedWaveMap)
 			{
 				TileMarkerStrategyPreset override = findUserStrategyPreset(preset.getId());
 				presets.add(override != null && override.isBuiltIn() ? override : preset);
@@ -292,14 +233,14 @@ public class GeneralTileMarkerStrategyManager
 		List<TileMarkerAssignmentPreset> presets = new ArrayList<>();
 		for (TileMarkerAssignmentPreset preset : store.getAssignmentPresets())
 		{
-			if (preset != null && preset.getRoleContext() == resolvedContext && !preset.isBuiltIn())
+			if (preset.getRoleContext() == resolvedContext && !preset.isBuiltIn())
 			{
 				presets.add(preset);
 			}
 		}
 		for (TileMarkerAssignmentPreset preset : builtInAssignmentPresets)
 		{
-			if (preset != null && preset.getRoleContext() == resolvedContext)
+			if (preset.getRoleContext() == resolvedContext)
 			{
 				presets.add(preset);
 			}
@@ -309,45 +250,17 @@ public class GeneralTileMarkerStrategyManager
 
 	public TileMarkerStrategyPreset findStrategyPreset(String id)
 	{
-		if (id == null)
-		{
-			return null;
-		}
-
 		TileMarkerStrategyPreset userPreset = findUserStrategyPreset(id);
 		TileMarkerStrategyPreset builtInPreset = findBuiltInStrategyPreset(id);
-		if (userPreset != null && (builtInPreset == null || userPreset.isBuiltIn()))
-		{
-			return userPreset;
-		}
+		if (userPreset != null && (builtInPreset == null || userPreset.isBuiltIn())) return userPreset;
 
 		return builtInPreset == null ? userPreset : builtInPreset;
 	}
 
 	public TileMarkerAssignmentPreset findAssignmentPreset(String id)
 	{
-		if (id == null)
-		{
-			return null;
-		}
-
-		for (TileMarkerAssignmentPreset preset : builtInAssignmentPresets)
-		{
-			if (preset != null && id.equals(preset.getId()))
-			{
-				return preset;
-			}
-		}
-
-		for (TileMarkerAssignmentPreset preset : store.getAssignmentPresets())
-		{
-			if (preset != null && id.equals(preset.getId()))
-			{
-				return preset;
-			}
-		}
-
-		return null;
+		TileMarkerAssignmentPreset builtIn = findById(builtInAssignmentPresets, id, TileMarkerAssignmentPreset::getId);
+		return builtIn == null ? findUserAssignmentPreset(id) : builtIn;
 	}
 
 	public TileMarkerStrategyPreset saveStrategyPreset(
@@ -358,10 +271,7 @@ public class GeneralTileMarkerStrategyManager
 			List<String> markerSetIds)
 	{
 		String normalizedName = name == null ? "" : name.trim();
-		if (normalizedName.isEmpty())
-		{
-			return null;
-		}
+		if (normalizedName.isEmpty()) return null;
 
 		TileMarkerWaveMap resolvedWaveMap = resolveWaveMap(waveMap);
 		TileMarkerStrategyPreset builtInPreset = findBuiltInStrategyPreset(id);
@@ -406,10 +316,7 @@ public class GeneralTileMarkerStrategyManager
 			Map<Integer, String> waveSelections)
 	{
 		String normalizedName = name == null ? "" : name.trim();
-		if (normalizedName.isEmpty())
-		{
-			return null;
-		}
+		if (normalizedName.isEmpty()) return null;
 
 		TileMarkerRoleContext resolvedContext = resolveContext(context);
 		Map<Integer, String> resolvedWaveSelections = existingWaveSelections(waveSelections);
@@ -433,7 +340,6 @@ public class GeneralTileMarkerStrategyManager
 		{
 			preset.setName(normalizedName);
 			preset.setRoleContext(resolvedContext);
-			preset.setBuiltIn(false);
 			preset.setWaveSelections(resolvedWaveSelections);
 		}
 
@@ -444,17 +350,7 @@ public class GeneralTileMarkerStrategyManager
 
 	public void deleteAssignmentPreset(String id)
 	{
-		if (id == null)
-		{
-			return;
-		}
-
-		if (findUserAssignmentPreset(id) == null)
-		{
-			return;
-		}
-
-		store.getAssignmentPresets().removeIf(preset -> preset != null && id.equals(preset.getId()));
+		if (id == null || !store.getAssignmentPresets().removeIf(preset -> id.equals(preset.getId()))) return;
 		for (TileMarkerRoleContext context : TileMarkerRoleContext.values())
 		{
 			if (id.equals(getActiveAssignmentPresetId(context)))
@@ -468,17 +364,14 @@ public class GeneralTileMarkerStrategyManager
 	public void applyAssignmentPreset(TileMarkerRoleContext context, String id)
 	{
 		TileMarkerRoleContext resolvedContext = resolveContext(context);
-		if (id == null || id.trim().isEmpty())
+		if (id == null || id.isBlank())
 		{
 			clearWaveSelections(resolvedContext);
 			return;
 		}
 
 		TileMarkerAssignmentPreset preset = findAssignmentPreset(id);
-		if (preset == null || preset.getRoleContext() != resolvedContext)
-		{
-			return;
-		}
+		if (preset == null || preset.getRoleContext() != resolvedContext) return;
 
 		applyWaveSelections(resolvedContext, preset.getWaveSelections());
 		store.setActiveAssignmentPresetId(resolvedContext, preset.getId());
@@ -488,31 +381,18 @@ public class GeneralTileMarkerStrategyManager
 	public void clearWaveSelections(TileMarkerRoleContext context)
 	{
 		TileMarkerRoleContext resolvedContext = resolveContext(context);
-		store.getWaveSelections().removeIf(selection -> selection != null && selection.getRoleContext() == resolvedContext);
+		store.getWaveSelections().removeIf(selection -> selection.getRoleContext() == resolvedContext);
 		store.setActiveAssignmentPresetId(resolvedContext, null);
 		save();
 	}
 
 	public void deleteStrategyPreset(String id)
 	{
-		if (id == null)
-		{
-			return;
-		}
-
-		if (findUserStrategyPreset(id) == null)
-		{
-			return;
-		}
-
-		store.getStrategyPresets().removeIf(preset -> id.equals(preset.getId()));
-		store.getWaveSelections().removeIf(selection -> selection != null && strategyIdMatches(selection.getStrategyId(), id));
+		if (id == null || !store.getStrategyPresets().removeIf(preset -> id.equals(preset.getId()))) return;
+		store.getWaveSelections().removeIf(selection -> strategyIdMatches(selection.getStrategyId(), id));
 		for (TileMarkerAssignmentPreset preset : store.getAssignmentPresets())
 		{
-			if (preset != null)
-			{
-				preset.getWaveSelections().values().removeIf(strategyId -> strategyIdMatches(strategyId, id));
-			}
+			preset.getWaveSelections().values().removeIf(strategyId -> strategyIdMatches(strategyId, id));
 		}
 		save();
 	}
@@ -562,10 +442,7 @@ public class GeneralTileMarkerStrategyManager
 	private void addActiveStrategyName(List<String> names, TileMarkerWaveSelection selection)
 	{
 		TileMarkerStrategyPreset preset = selection == null ? null : findStrategyPreset(selection.getStrategyId());
-		if (preset == null || preset.getWaveMap() != TileMarkerWaveMap.fromWave(selection.getWave()) || isBlank(preset.getNotes()))
-		{
-			return;
-		}
+		if (preset == null || preset.getWaveMap() != TileMarkerWaveMap.fromWave(selection.getWave()) || isBlank(preset.getNotes())) return;
 
 		names.add(strategyPresetDisplayName(preset));
 	}
@@ -593,8 +470,7 @@ public class GeneralTileMarkerStrategyManager
 		TileMarkerRoleContext resolvedContext = resolveContext(context);
 		for (TileMarkerWaveSelection selection : store.getWaveSelections())
 		{
-			if (selection != null
-					&& selection.getRoleContext() == resolvedContext
+			if (selection.getRoleContext() == resolvedContext
 					&& strategyMatchesWave(selection.getWave(), selection.getStrategyId()))
 			{
 				selections.put(selection.getWave(), selection.getStrategyId());
@@ -673,14 +549,7 @@ public class GeneralTileMarkerStrategyManager
 	public TileMarkerExportResult exportAssignmentPresetJson(TileMarkerRoleContext context, String name)
 	{
 		Map<Integer, String> waveSelections = getWaveSelections(context);
-		if (waveSelections.isEmpty())
-		{
-			return null;
-		}
-
-		TileMarkerAssignmentExport export = new TileMarkerAssignmentExport();
-		export.setName(isBlank(name) ? null : name.trim());
-		export.setWaveSelections(waveSelections);
+		if (waveSelections.isEmpty()) return null;
 
 		Set<String> strategyIds = new LinkedHashSet<>();
 		Set<String> markerSetIds = new LinkedHashSet<>();
@@ -716,16 +585,14 @@ public class GeneralTileMarkerStrategyManager
 			}
 		}
 
-		export.setStrategyPresets(strategyPresets);
-		export.setMarkerSets(markerSets);
+		String exportName = isBlank(name) ? null : name.trim();
+		TileMarkerAssignmentExport export = new TileMarkerAssignmentExport(
+				exportName, waveSelections, strategyPresets, markerSets);
 		return new TileMarkerExportResult(
 				gson.toJson(export),
-				assignmentDisplayName(export.getName()),
-				wavesText(waveSelections.keySet()),
+				assignmentDisplayName(exportName),
 				TileMarkerExportType.ASSIGNMENT_PRESET,
 				TileMarkerExportSummary.assignment(waveSelections, this::strategyDisplayName),
-				strategyPresets.size(),
-				markerSets.size(),
 				markerCount
 		);
 	}
@@ -737,7 +604,7 @@ public class GeneralTileMarkerStrategyManager
 		int markerCount = 0;
 		for (TileMarkerSet set : store.getMarkerSets())
 		{
-			if (set != null && seenIds.add(set.getId()))
+			if (seenIds.add(set.getId()))
 			{
 				TileMarkerSet copy = copyMarkerSet(set);
 				copy.setBuiltIn(false);
@@ -746,21 +613,14 @@ public class GeneralTileMarkerStrategyManager
 			}
 		}
 
-		if (markerSets.isEmpty())
-		{
-			return null;
-		}
+		if (markerSets.isEmpty()) return null;
 
-		TileMarkerSetCollectionExport export = new TileMarkerSetCollectionExport();
-		export.setMarkerSets(markerSets);
+		TileMarkerSetCollectionExport export = new TileMarkerSetCollectionExport(markerSets);
 		return new TileMarkerExportResult(
 				gson.toJson(export),
 				"all tile markers",
-				null,
 				TileMarkerExportType.MARKER_SET_COLLECTION,
 				TileMarkerExportSummary.markerSets(markerSets),
-				0,
-				markerSets.size(),
 				markerCount
 		);
 	}
@@ -772,7 +632,7 @@ public class GeneralTileMarkerStrategyManager
 		Set<String> markerSetIds = new LinkedHashSet<>();
 		for (TileMarkerStrategyPreset preset : store.getStrategyPresets())
 		{
-			if (preset != null && strategyIds.add(preset.getId()))
+			if (strategyIds.add(preset.getId()))
 			{
 				TileMarkerStrategyPreset copy = copyStrategyPreset(preset);
 				copy.setBuiltIn(false);
@@ -782,22 +642,14 @@ public class GeneralTileMarkerStrategyManager
 		}
 
 		List<TileMarkerSet> markerSets = exportMarkerSets(markerSetIds);
-		if (strategyPresets.isEmpty())
-		{
-			return null;
-		}
+		if (strategyPresets.isEmpty()) return null;
 
-		TileMarkerStrategyCollectionExport export = new TileMarkerStrategyCollectionExport();
-		export.setStrategyPresets(strategyPresets);
-		export.setMarkerSets(markerSets);
+		TileMarkerStrategyCollectionExport export = new TileMarkerStrategyCollectionExport(strategyPresets, markerSets);
 		return new TileMarkerExportResult(
 				gson.toJson(export),
 				"all wave strategies",
-				null,
 				TileMarkerExportType.STRATEGY_COLLECTION,
 				TileMarkerExportSummary.strategies(strategyPresets),
-				strategyPresets.size(),
-				markerSets.size(),
 				markerCount(markerSets)
 		);
 	}
@@ -805,10 +657,7 @@ public class GeneralTileMarkerStrategyManager
 	public TileMarkerExportResult importAssignmentPresetJson(TileMarkerRoleContext context, String json)
 	{
 		TileMarkerAssignmentExport imported = gson.fromJson(json, TileMarkerAssignmentExport.class);
-		if (imported == null || imported.getWaveSelections().isEmpty())
-		{
-			return null;
-		}
+		if (imported == null || imported.getWaveSelections().isEmpty()) return null;
 
 		for (TileMarkerSet set : imported.getMarkerSets())
 		{
@@ -820,10 +669,7 @@ public class GeneralTileMarkerStrategyManager
 		}
 
 		Map<Integer, String> waveSelections = existingWaveSelections(imported.getWaveSelections());
-		if (waveSelections.isEmpty())
-		{
-			return null;
-		}
+		if (waveSelections.isEmpty()) return null;
 
 		int markerCount = markerCount(imported.getMarkerSets());
 		if (isBlank(imported.getName()))
@@ -834,11 +680,8 @@ public class GeneralTileMarkerStrategyManager
 			return new TileMarkerExportResult(
 					json,
 					assignmentDisplayName(null),
-					wavesText(waveSelections.keySet()),
 					TileMarkerExportType.ASSIGNMENT_PRESET,
 					TileMarkerExportSummary.assignment(waveSelections, this::strategyDisplayName),
-					imported.getStrategyPresets().size(),
-					imported.getMarkerSets().size(),
 					markerCount
 			);
 		}
@@ -849,63 +692,53 @@ public class GeneralTileMarkerStrategyManager
 				imported.getName().trim(),
 				waveSelections
 		);
-		if (saved == null)
-		{
-			return null;
-		}
+		if (saved == null) return null;
 
 		applyAssignmentPreset(context, saved.getId());
 		return new TileMarkerExportResult(
 				json,
 				saved.getName(),
-				wavesText(waveSelections.keySet()),
 				TileMarkerExportType.ASSIGNMENT_PRESET,
 				TileMarkerExportSummary.assignment(waveSelections, this::strategyDisplayName),
-				imported.getStrategyPresets().size(),
-				imported.getMarkerSets().size(),
 				markerCount
 		);
 	}
 
 	public TileMarkerExportResult importMarkerExportJson(TileMarkerRoleContext context, String json)
 	{
-		TileMarkerExportType type = detectExportType(json);
-		if (type == null)
-		{
-			return null;
-		}
-
-		switch (type)
-		{
-			case ASSIGNMENT_PRESET:
-				return importAssignmentPresetJson(context, json);
-			case STRATEGY_PRESET:
-				return importStrategyPresetJson(json, null);
-			case MARKER_SET:
-				return importMarkerSetJson(json);
-			case STRATEGY_COLLECTION:
-				return importStrategyCollectionJson(json);
-			case MARKER_SET_COLLECTION:
-				return importMarkerSetCollectionJson(json);
-			default:
-				return null;
-		}
+		return importDetectedMarkerExport(context, json, null, null);
 	}
 
 	public TileMarkerExportResult importMarkerExportJson(String json, TileMarkerWaveMap expectedWaveMap)
 	{
+		return importDetectedMarkerExport(null, json, expectedWaveMap, null);
+	}
+
+	public TileMarkerExportResult importMarkerExportForWave(TileMarkerRoleContext context, int wave, String json)
+	{
+		return importDetectedMarkerExport(context, json, TileMarkerWaveMap.fromWave(wave), wave);
+	}
+
+	private TileMarkerExportResult importDetectedMarkerExport(
+			TileMarkerRoleContext context,
+			String json,
+			TileMarkerWaveMap expectedWaveMap,
+			Integer wave)
+	{
 		TileMarkerExportType type = detectExportType(json);
-		if (type == null)
-		{
-			return null;
-		}
+		if (type == null) return null;
 
 		switch (type)
 		{
 			case ASSIGNMENT_PRESET:
-				return importAssignmentPresetContentsJson(json);
+				return context == null ? importAssignmentPresetContentsJson(json) : importAssignmentPresetJson(context, json);
 			case STRATEGY_PRESET:
-				return importStrategyPresetJson(json, expectedWaveMap);
+				TileMarkerExportResult result = importStrategyPresetJson(json, expectedWaveMap);
+				if (result != null && wave != null)
+				{
+					setWaveSelectionStrategyId(context, wave, result.getId());
+				}
+				return result;
 			case MARKER_SET:
 				return importMarkerSetJson(json, expectedWaveMap);
 			case STRATEGY_COLLECTION:
@@ -917,46 +750,10 @@ public class GeneralTileMarkerStrategyManager
 		}
 	}
 
-	public TileMarkerExportResult importMarkerExportForWave(TileMarkerRoleContext context, int wave, String json)
-	{
-		TileMarkerExportType type = detectExportType(json);
-		if (type == null)
-		{
-			return null;
-		}
-
-		TileMarkerWaveMap waveMap = TileMarkerWaveMap.fromWave(wave);
-		TileMarkerExportResult result;
-		switch (type)
-		{
-			case ASSIGNMENT_PRESET:
-				return importAssignmentPresetJson(context, json);
-			case STRATEGY_PRESET:
-				result = importStrategyPresetJson(json, waveMap);
-				if (result != null)
-				{
-					setWaveSelectionStrategyId(context, wave, result.getId());
-				}
-				return result;
-			case MARKER_SET:
-				return importMarkerSetJson(json, waveMap);
-			case STRATEGY_COLLECTION:
-				return importStrategyCollectionJson(json);
-			case MARKER_SET_COLLECTION:
-				return importMarkerSetCollectionJson(json);
-			default:
-				return null;
-		}
-	}
-
 	public TileMarkerExportResult exportStrategyPresetJson(TileMarkerStrategyPreset preset)
 	{
-		if (preset == null || isBlank(preset.getName()))
-		{
-			return null;
-		}
+		if (preset == null || isBlank(preset.getName())) return null;
 
-		TileMarkerStrategyPresetExport export = new TileMarkerStrategyPresetExport();
 		TileMarkerStrategyPreset copy = copyStrategyPreset(preset);
 		copy.setBuiltIn(false);
 
@@ -977,17 +774,13 @@ public class GeneralTileMarkerStrategyManager
 		}
 
 		copy.setMarkerSetIds(markerSetIds);
-		export.setStrategyPreset(copy);
-		export.setMarkerSets(markerSets);
+		TileMarkerStrategyPresetExport export = new TileMarkerStrategyPresetExport(copy, markerSets);
 		return new TileMarkerExportResult(
 				gson.toJson(export),
 				copy.getId(),
 				strategyPresetDisplayName(copy),
-				null,
 				TileMarkerExportType.STRATEGY_PRESET,
 				TileMarkerExportSummary.strategyPreset(copy, markerSets),
-				1,
-				markerSets.size(),
 				markerCount
 		);
 	}
@@ -1009,44 +802,31 @@ public class GeneralTileMarkerStrategyManager
 		}
 
 		TileMarkerStrategyPreset saved = importOrReplaceStrategyPreset(importedPreset);
-		if (saved == null || (expectedWaveMap != null && saved.getWaveMap() != expectedWaveMap))
-		{
-			return null;
-		}
+		if (saved == null || (expectedWaveMap != null && saved.getWaveMap() != expectedWaveMap)) return null;
 
 		save();
 		return new TileMarkerExportResult(
 				json,
 				saved.getId(),
 				strategyPresetDisplayName(saved),
-				null,
 				TileMarkerExportType.STRATEGY_PRESET,
 				TileMarkerExportSummary.strategyPreset(saved, imported.getMarkerSets()),
-				1,
-				imported.getMarkerSets().size(),
 				markerCount(imported.getMarkerSets())
 		);
 	}
 
 	public TileMarkerExportResult exportMarkerSetJson(TileMarkerSet set)
 	{
-		if (set == null)
-		{
-			return null;
-		}
+		if (set == null) return null;
 
-		TileMarkerSetExport export = new TileMarkerSetExport();
 		TileMarkerSet copy = copyMarkerSet(set);
 		copy.setBuiltIn(false);
-		export.setMarkerSet(copy);
+		TileMarkerSetExport export = new TileMarkerSetExport(copy);
 		return new TileMarkerExportResult(
 				gson.toJson(export),
 				copy.getId(),
 				markerSetDisplayName(copy),
-				null,
 				TileMarkerExportType.MARKER_SET,
-				0,
-				1,
 				copy.getMarkers().size()
 		);
 	}
@@ -1060,10 +840,7 @@ public class GeneralTileMarkerStrategyManager
 	{
 		TileMarkerSetExport imported = gson.fromJson(json, TileMarkerSetExport.class);
 		TileMarkerSet importedSet = imported == null ? null : imported.getMarkerSet();
-		if (importedSet == null || (expectedWaveMap != null && importedSet.getWaveMap() != expectedWaveMap))
-		{
-			return null;
-		}
+		if (importedSet == null || (expectedWaveMap != null && importedSet.getWaveMap() != expectedWaveMap)) return null;
 
 		TileMarkerSet saved = importOrReplaceMarkerSet(importedSet);
 		save();
@@ -1071,10 +848,7 @@ public class GeneralTileMarkerStrategyManager
 				json,
 				saved.getId(),
 				markerSetDisplayName(saved),
-				null,
 				TileMarkerExportType.MARKER_SET,
-				0,
-				1,
 				saved.getMarkers().size()
 		);
 	}
@@ -1082,10 +856,7 @@ public class GeneralTileMarkerStrategyManager
 	private TileMarkerExportResult importAssignmentPresetContentsJson(String json)
 	{
 		TileMarkerAssignmentExport imported = gson.fromJson(json, TileMarkerAssignmentExport.class);
-		if (imported == null)
-		{
-			return null;
-		}
+		if (imported == null) return null;
 
 		for (TileMarkerSet set : imported.getMarkerSets())
 		{
@@ -1100,11 +871,8 @@ public class GeneralTileMarkerStrategyManager
 		return new TileMarkerExportResult(
 				json,
 				assignmentDisplayName(imported.getName()),
-				wavesText(imported.getWaveSelections().keySet()),
 				TileMarkerExportType.ASSIGNMENT_PRESET,
 				TileMarkerExportSummary.assignment(existingWaveSelections(imported.getWaveSelections()), this::strategyDisplayName),
-				imported.getStrategyPresets().size(),
-				imported.getMarkerSets().size(),
 				markerCount(imported.getMarkerSets())
 		);
 	}
@@ -1112,10 +880,7 @@ public class GeneralTileMarkerStrategyManager
 	private TileMarkerExportResult importMarkerSetCollectionJson(String json)
 	{
 		TileMarkerSetCollectionExport imported = gson.fromJson(json, TileMarkerSetCollectionExport.class);
-		if (imported == null || imported.getMarkerSets().isEmpty())
-		{
-			return null;
-		}
+		if (imported == null || imported.getMarkerSets().isEmpty()) return null;
 
 		String firstId = null;
 		for (TileMarkerSet set : imported.getMarkerSets())
@@ -1132,11 +897,8 @@ public class GeneralTileMarkerStrategyManager
 				json,
 				firstId,
 				"tile marker collection",
-				null,
 				TileMarkerExportType.MARKER_SET_COLLECTION,
 				TileMarkerExportSummary.markerSets(imported.getMarkerSets()),
-				0,
-				imported.getMarkerSets().size(),
 				markerCount(imported.getMarkerSets())
 		);
 	}
@@ -1144,10 +906,7 @@ public class GeneralTileMarkerStrategyManager
 	private TileMarkerExportResult importStrategyCollectionJson(String json)
 	{
 		TileMarkerStrategyCollectionExport imported = gson.fromJson(json, TileMarkerStrategyCollectionExport.class);
-		if (imported == null || imported.getStrategyPresets().isEmpty())
-		{
-			return null;
-		}
+		if (imported == null || imported.getStrategyPresets().isEmpty()) return null;
 
 		for (TileMarkerSet set : imported.getMarkerSets())
 		{
@@ -1169,21 +928,15 @@ public class GeneralTileMarkerStrategyManager
 			}
 		}
 
-		if (strategyCount == 0)
-		{
-			return null;
-		}
+		if (strategyCount == 0) return null;
 
 		save();
 		return new TileMarkerExportResult(
 				json,
 				firstId,
 				"wave strategy collection",
-				null,
 				TileMarkerExportType.STRATEGY_COLLECTION,
 				TileMarkerExportSummary.strategies(imported.getStrategyPresets()),
-				strategyCount,
-				imported.getMarkerSets().size(),
 				markerCount(imported.getMarkerSets())
 		);
 	}
@@ -1199,10 +952,7 @@ public class GeneralTileMarkerStrategyManager
 
 		for (TileMarkerSet set : store.getMarkerSets())
 		{
-			if (set == null || isBlank(set.getId()))
-			{
-				continue;
-			}
+			if (set == null || isBlank(set.getId())) continue;
 
 			if (setIds.add(set.getId()))
 			{
@@ -1223,6 +973,7 @@ public class GeneralTileMarkerStrategyManager
 				preset.setMarkerSetIds(existingMarkerSetIds(preset.getWaveMap(), preset.getMarkerSetIds()));
 			}
 		}
+		store.getStrategyPresets().removeIf(preset -> preset == null || isBlank(preset.getId()));
 		for (TileMarkerAssignmentPreset preset : store.getAssignmentPresets())
 		{
 			if (preset != null)
@@ -1249,74 +1000,22 @@ public class GeneralTileMarkerStrategyManager
 
 	private TileMarkerSet findUserMarkerSet(String id)
 	{
-		if (id == null)
-		{
-			return null;
-		}
-
-		for (TileMarkerSet set : store.getMarkerSets())
-		{
-			if (set != null && id.equals(set.getId()))
-			{
-				return set;
-			}
-		}
-
-		return null;
+		return findById(store.getMarkerSets(), id, TileMarkerSet::getId);
 	}
 
 	private TileMarkerStrategyPreset findUserStrategyPreset(String id)
 	{
-		if (id == null)
-		{
-			return null;
-		}
-
-		for (TileMarkerStrategyPreset preset : store.getStrategyPresets())
-		{
-			if (preset != null && id.equals(preset.getId()))
-			{
-				return preset;
-			}
-		}
-
-		return null;
+		return findById(store.getStrategyPresets(), id, TileMarkerStrategyPreset::getId);
 	}
 
 	private TileMarkerStrategyPreset findBuiltInStrategyPreset(String id)
 	{
-		if (id == null)
-		{
-			return null;
-		}
-
-		for (TileMarkerStrategyPreset preset : builtInStrategyPresets)
-		{
-			if (preset != null && id.equals(preset.getId()))
-			{
-				return preset;
-			}
-		}
-
-		return null;
+		return findById(builtInStrategyPresets, id, TileMarkerStrategyPreset::getId);
 	}
 
 	private TileMarkerAssignmentPreset findUserAssignmentPreset(String id)
 	{
-		if (id == null)
-		{
-			return null;
-		}
-
-		for (TileMarkerAssignmentPreset preset : store.getAssignmentPresets())
-		{
-			if (preset != null && id.equals(preset.getId()))
-			{
-				return preset;
-			}
-		}
-
-		return null;
+		return findById(store.getAssignmentPresets(), id, TileMarkerAssignmentPreset::getId);
 	}
 
 	private TileMarkerStrategyPreset findStrategyPresetByName(TileMarkerWaveMap waveMap, String name)
@@ -1324,8 +1023,7 @@ public class GeneralTileMarkerStrategyManager
 		TileMarkerWaveMap resolvedWaveMap = resolveWaveMap(waveMap);
 		for (TileMarkerStrategyPreset preset : store.getStrategyPresets())
 		{
-			if (preset != null
-					&& preset.getWaveMap() == resolvedWaveMap
+			if (preset.getWaveMap() == resolvedWaveMap
 					&& preset.getName() != null
 					&& preset.getName().trim().equalsIgnoreCase(name))
 			{
@@ -1341,8 +1039,7 @@ public class GeneralTileMarkerStrategyManager
 		TileMarkerRoleContext resolvedContext = resolveContext(context);
 		for (TileMarkerAssignmentPreset preset : store.getAssignmentPresets())
 		{
-			if (preset != null
-					&& preset.getRoleContext() == resolvedContext
+			if (preset.getRoleContext() == resolvedContext
 					&& preset.getName() != null
 					&& preset.getName().trim().equalsIgnoreCase(name))
 			{
@@ -1361,10 +1058,7 @@ public class GeneralTileMarkerStrategyManager
 	private static int markerCount(List<TileMarkerSet> markerSets)
 	{
 		int markerCount = 0;
-		if (markerSets == null)
-		{
-			return markerCount;
-		}
+		if (markerSets == null) return markerCount;
 
 		for (TileMarkerSet set : markerSets)
 		{
@@ -1381,7 +1075,7 @@ public class GeneralTileMarkerStrategyManager
 			Map<Integer, String> waveSelections)
 	{
 		TileMarkerRoleContext resolvedContext = resolveContext(context);
-		store.getWaveSelections().removeIf(selection -> selection != null && selection.getRoleContext() == resolvedContext);
+		store.getWaveSelections().removeIf(selection -> selection.getRoleContext() == resolvedContext);
 		for (Map.Entry<Integer, String> entry : existingWaveSelections(waveSelections).entrySet())
 		{
 			TileMarkerWaveSelection selection = new TileMarkerWaveSelection(waveSelectionId(resolvedContext, entry.getKey()), resolvedContext, entry.getKey());
@@ -1392,10 +1086,7 @@ public class GeneralTileMarkerStrategyManager
 
 	private String strategyDisplayName(String strategyId)
 	{
-		if (isBlank(strategyId))
-		{
-			return "None";
-		}
+		if (isBlank(strategyId)) return "None";
 
 		TileMarkerStrategyPreset preset = findStrategyPreset(strategyId);
 		return strategyPresetDisplayName(preset);
@@ -1404,11 +1095,6 @@ public class GeneralTileMarkerStrategyManager
 	private List<TileMarkerSet> exportMarkerSets(Set<String> markerSetIds)
 	{
 		List<TileMarkerSet> markerSets = new ArrayList<>();
-		if (markerSetIds == null)
-		{
-			return markerSets;
-		}
-
 		for (String markerSetId : markerSetIds)
 		{
 			TileMarkerSet set = findMarkerSet(markerSetId);
@@ -1425,40 +1111,19 @@ public class GeneralTileMarkerStrategyManager
 	private TileMarkerExportType detectExportType(String json)
 	{
 		JsonObject object = parseExportObject(json);
-		if (object == null)
-		{
-			return null;
-		}
+		if (object == null) return null;
 
-		if (object.has("waveSelections"))
-		{
-			return TileMarkerExportType.ASSIGNMENT_PRESET;
-		}
-		if (object.has("strategyPreset"))
-		{
-			return TileMarkerExportType.STRATEGY_PRESET;
-		}
-		if (object.has("markerSet"))
-		{
-			return TileMarkerExportType.MARKER_SET;
-		}
-		if (object.has("strategyPresets"))
-		{
-			return TileMarkerExportType.STRATEGY_COLLECTION;
-		}
-		if (object.has("markerSets"))
-		{
-			return TileMarkerExportType.MARKER_SET_COLLECTION;
-		}
+		if (object.has("waveSelections")) return TileMarkerExportType.ASSIGNMENT_PRESET;
+		if (object.has("strategyPreset")) return TileMarkerExportType.STRATEGY_PRESET;
+		if (object.has("markerSet")) return TileMarkerExportType.MARKER_SET;
+		if (object.has("strategyPresets")) return TileMarkerExportType.STRATEGY_COLLECTION;
+		if (object.has("markerSets")) return TileMarkerExportType.MARKER_SET_COLLECTION;
 		return null;
 	}
 
 	private JsonObject parseExportObject(String json)
 	{
-		if (json == null || json.trim().isEmpty())
-		{
-			return null;
-		}
+		if (json == null || json.isBlank()) return null;
 
 		try
 		{
@@ -1473,16 +1138,10 @@ public class GeneralTileMarkerStrategyManager
 
 	private TileMarkerSet importOrReplaceMarkerSet(TileMarkerSet imported)
 	{
-		if (imported == null)
-		{
-			return null;
-		}
+		if (imported == null) return null;
 
 		TileMarkerSet builtIn = findBuiltInMarkerSet(imported.getId());
-		if (builtIn != null)
-		{
-			return builtIn;
-		}
+		if (builtIn != null) return builtIn;
 
 		TileMarkerSet existing = findUserMarkerSet(imported.getId());
 		if (existing == null)
@@ -1500,17 +1159,14 @@ public class GeneralTileMarkerStrategyManager
 		existing.setName(imported.getName());
 		existing.setMapMode(imported.getMapMode());
 		existing.setWaveMap(imported.getWaveMap());
-		existing.setMarkers(copyMarkers(imported.getMarkers()));
+		existing.setMarkers(TileMarker.copyAll(imported.getMarkers()));
 		existing.setBuiltIn(false);
 		return existing;
 	}
 
 	private TileMarkerStrategyPreset importOrReplaceStrategyPreset(TileMarkerStrategyPreset imported)
 	{
-		if (imported == null || isBlank(imported.getName()))
-		{
-			return null;
-		}
+		if (imported == null || isBlank(imported.getName())) return null;
 
 		TileMarkerStrategyPreset existing = findUserStrategyPreset(imported.getId());
 
@@ -1537,17 +1193,15 @@ public class GeneralTileMarkerStrategyManager
 
 	private TileMarkerSet findBuiltInMarkerSet(String id)
 	{
-		if (id == null)
-		{
-			return null;
-		}
+		return findById(builtInMarkerSets, id, TileMarkerSet::getId);
+	}
 
-		for (TileMarkerSet set : builtInMarkerSets)
+	private static <T> T findById(List<T> values, String id, Function<T, String> idGetter)
+	{
+		if (id == null) return null;
+		for (T value : values)
 		{
-			if (set != null && id.equals(set.getId()))
-			{
-				return set;
-			}
+			if (value != null && id.equals(idGetter.apply(value))) return value;
 		}
 		return null;
 	}
@@ -1571,89 +1225,15 @@ public class GeneralTileMarkerStrategyManager
 				set.getName(),
 				set.getMapMode(),
 				set.getWaveMap(),
-				copyMarkers(set.getMarkers()),
+				TileMarker.copyAll(set.getMarkers()),
 				set.isBuiltIn()
 		);
-	}
-
-	private static List<TileMarker> copyMarkers(List<TileMarker> source)
-	{
-		List<TileMarker> copies = new ArrayList<>();
-		if (source == null)
-		{
-			return copies;
-		}
-
-		for (TileMarker marker : source)
-		{
-			if (marker != null)
-			{
-				copies.add(copyMarker(marker));
-			}
-		}
-		return copies;
-	}
-
-	private static TileMarker copyMarker(TileMarker marker)
-	{
-		TileMarkerTile tile = marker.getTile();
-		TileMarkerTile tileCopy = tile == null
-				? null
-				: new TileMarkerTile(tile.getRegionId(), tile.getRegionX(), tile.getRegionY(), tile.getZ());
-		return new TileMarker(
-				marker.getId(),
-				tileCopy,
-				marker.getName(),
-				marker.getLabel(),
-				marker.getColor(),
-				marker.getOpacityPercent(),
-				marker.getBorderWidth()
-		);
-	}
-
-	private static String markerSetDisplayName(TileMarkerSet set)
-	{
-		return set == null || isBlank(set.getName()) ? "unnamed tile marker set" : set.getName().trim();
-	}
-
-	private static String strategyPresetDisplayName(TileMarkerStrategyPreset preset)
-	{
-		return preset == null || isBlank(preset.getName()) ? "unnamed wave strategy" : preset.getName().trim();
-	}
-
-	private static String wavesText(Set<Integer> waves)
-	{
-		if (waves == null || waves.isEmpty())
-		{
-			return "no waves";
-		}
-
-		List<Integer> sorted = new ArrayList<>(waves);
-		java.util.Collections.sort(sorted);
-		if (sorted.size() == 10 && sorted.get(0) == 1 && sorted.get(9) == 10)
-		{
-			return "all waves";
-		}
-
-		StringBuilder builder = new StringBuilder();
-		for (Integer wave : sorted)
-		{
-			if (builder.length() > 0)
-			{
-				builder.append(", ");
-			}
-			builder.append(wave);
-		}
-		return builder.toString();
 	}
 
 	private Map<Integer, String> existingWaveSelections(Map<Integer, String> waveSelections)
 	{
 		Map<Integer, String> selections = new HashMap<>();
-		if (waveSelections == null)
-		{
-			return selections;
-		}
+		if (waveSelections == null) return selections;
 
 		for (Map.Entry<Integer, String> entry : waveSelections.entrySet())
 		{
@@ -1685,14 +1265,8 @@ public class GeneralTileMarkerStrategyManager
 
 	private List<String> without(List<String> ids, String removedId)
 	{
-		List<String> result = new ArrayList<>();
-		for (String id : ids)
-		{
-			if (!removedId.equals(id))
-			{
-				result.add(id);
-			}
-		}
+		List<String> result = new ArrayList<>(ids);
+		result.removeIf(removedId::equals);
 		return result;
 	}
 
@@ -1728,10 +1302,7 @@ public class GeneralTileMarkerStrategyManager
 
 	private boolean strategyMatchesWave(int wave, String strategyId)
 	{
-		if (isBlank(strategyId))
-		{
-			return false;
-		}
+		if (isBlank(strategyId)) return false;
 
 		TileMarkerStrategyPreset preset = findStrategyPreset(strategyId);
 		return preset != null && preset.getWaveMap() == TileMarkerWaveMap.fromWave(wave);
@@ -1744,7 +1315,7 @@ public class GeneralTileMarkerStrategyManager
 
 	private static boolean isBlank(String value)
 	{
-		return value == null || value.trim().isEmpty();
+		return value == null || value.isBlank();
 	}
 
 }
